commit translated contents

--- a/docs/visual-basic/misc/bc30074.md
+++ b/docs/visual-basic/misc/bc30074.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33606611"
 ---
 # <a name="constant-cannot-be-the-target-of-an-assignment"></a>定数を代入式のターゲットにすることはできません
 値を代入するコンテキストに定数があります。 実行時に値を代入できるのは、書き込み可能な変数、プロパティ、配列要素だけです。  
