--- a/docs/visual-basic/misc/bc30278.md
+++ b/docs/visual-basic/misc/bc30278.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33610280"
 ---
 # <a name="39sub39-or-39function39-expected-after-39delegate39"></a>&#39;Sub&#39;または&#39;関数&#39;後に予期される&#39;デリゲート&#39;
 `Delegate` ステートメントに、 `Sub` または `Function` プロシージャが指定されていません。 `Sub` または `Function` キーワードは、 `Delegate` キーワードの直後に配置する必要があります。  
