--- a/docs/visual-basic/misc/bc30497.md
+++ b/docs/visual-basic/misc/bc30497.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33609750"
 ---
 # <a name="39sub-new39-cannot-handle-events"></a>&#39;Sub New&#39;イベントを処理することはできません
 `Sub New` と `Handles`を結合しようとしていますが、この処理は実行できません。 プロシージャ宣言の最後で `Handles` キーワードを使用すると、 `WithEvents` キーワードで宣言されたオブジェクト変数によって発生したイベントが処理されるようになります。  
