--- a/docs/visual-basic/misc/bc30576.md
+++ b/docs/visual-basic/misc/bc30576.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33610992"
 ---
 # <a name="statement-does-not-declare-a-39get39-or-39set39-method"></a>ステートメントを宣言しません、&#39;取得&#39;または&#39;設定&#39;メソッド
 ステートメントには、 `Get` プロシージャの周囲に `Set` または `Property` 宣言ステートメントが指定されていません。 プロパティは、 `Property` および `End Property` ステートメントの中に囲まれたコードのブロックとして定義します。 このブロック内では、各 `Property` プロシージャが、宣言ステートメントと End ステートメントの中に囲まれた内部ブロックとしてを記述されます。  
