--- a/docs/visual-basic/misc/bc30603.md
+++ b/docs/visual-basic/misc/bc30603.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611288"
 ---
 # <a name="statement-cannot-appear-within-an-interface-body"></a>ステートメントをインターフェイス本体内部に記述することはできません
 インターフェイス メンバーの宣言に、メンバーを終了するステートメントが `End`*membername*の形式で含まれています。  
