--- a/docs/visual-basic/misc/bc30624.md
+++ b/docs/visual-basic/misc/bc30624.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611115"
 ---
 # <a name="39structure39-statement-must-end-with-a-matching-39end-structure39"></a>&#39;構造体&#39;、対応するステートメントが終了する必要があります&#39;End 構造体&#39;
 構造体は `Structure` ステートメントで始まり、 `End Structure` コンストラクトで終わります。  
