--- a/docs/visual-basic/misc/bc30671.md
+++ b/docs/visual-basic/misc/bc30671.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614352"
 ---
 # <a name="explicit-initialization-is-not-permitted-with-multiple-variables-declared-with-a-single-type-specifier"></a>単一の型指定子で宣言された複数の変数で、明示的な初期化を行うことはできません
 複数の変数が同一行で宣言された場合は、初期化できません。  
