--- a/docs/visual-basic/misc/bc31129.md
+++ b/docs/visual-basic/misc/bc31129.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33621060"
 ---
 # <a name="39raiseevent39-is-already-declared"></a>&#39;RaiseEvent&#39;は既に宣言されています
 カスタム イベントの宣言に 2 つ以上の `RaiseEvent` の宣言があります。 `RaiseEvent` の宣言では、イベントの発生に使用されるプロシージャを宣言します。  
