--- a/docs/visual-basic/misc/bc31141.md
+++ b/docs/visual-basic/misc/bc31141.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33623108"
 ---
 # <a name="option-strict-custom-can-only-be-used-as-an-option-to-the-command-line-compiler-vbcexe"></a>Option Strict Custom はコマンドライン コンパイラ (vbc.exe) へのオプションとしてのみ使用することができます
 `Option Strict` ステートメントは、 `On` と `Off` のみを引数として受け取ることができます。 `Option Strict Custom` は使用できません。  
