--- a/docs/visual-basic/misc/bc30094.md
+++ b/docs/visual-basic/misc/bc30094.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618408"
 ---
 # <a name="label-39ltlabelnamegt39-is-already-defined-in-the-current-methodmultiline-lambda"></a>ラベル&#39; &lt;labelname&gt; &#39;は、現在のメソッドや複数行ラムダで既に定義
 ラベル名がプロシージャ内で重複しています。 プロシージャ内のすべての名前は一意である必要があります。  
