--- a/docs/visual-basic/misc/bc30097.md
+++ b/docs/visual-basic/misc/bc30097.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33605756"
 ---
 # <a name="39exit-while39-can-only-appear-inside-a-39while39-statement"></a>&#39;Exit While&#39;内でのみ表示できます、&#39;中&#39;ステートメント
 `Exit While` ステートメントが `While` ブロックの外側にあります。 `Exit While` は、 `While` ステートメントとそれに対応する `End While` ステートメントとの間でのみ有効です。  
