--- a/docs/visual-basic/misc/bc30231.md
+++ b/docs/visual-basic/misc/bc30231.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33607911"
 ---
 # <a name="39implements39-not-valid-in-modules"></a>&#39;実装して&#39;モジュールでは無効です
 モジュール内に `Implements` ステートメントまたは句が出現しています。 モジュールは、インターフェイスを実装できません。  
