--- a/docs/visual-basic/misc/bc30252.md
+++ b/docs/visual-basic/misc/bc30252.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33609835"
 ---
 # <a name="39end-interface39-must-be-preceded-by-a-matching-39interface39"></a>&#39;End Interface&#39;前に、対応する必要がある&#39;インターフェイス&#39;
 `End Interface` ステートメントがあるのに、対応する `Interface` ステートメントがありません。 `End Interface` の前に、対応する `Interface` ステートメントが必要です。  
