--- a/docs/visual-basic/misc/bc30280.md
+++ b/docs/visual-basic/misc/bc30280.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33608025"
 ---
 # <a name="enum-39ltenumnamegt39-must-contain-at-least-one-member"></a>Enum &#39; &lt;enumname&gt; &#39;には、少なくとも 1 つのメンバーを含める必要があります
 空の列挙型があります。 少なくとも 1 つのメンバーを `Enum` ステートメントと `End Enum` ステートメントの間で宣言する必要があります。  
