--- a/docs/visual-basic/misc/bc30362.md
+++ b/docs/visual-basic/misc/bc30362.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614083"
 ---
 # <a name="39ltpropertyname1gt39-cannot-override-39ltpropertyname2gt39-because-they-differ-by-39readonly39-or-39writeonly39"></a>&#39;&lt;propertyname1&gt; &#39;オーバーライドできません&#39; &lt;propertyname2&gt; &#39;が異なるため、 &#39;ReadOnly&#39;または&#39;WriteOnly&#39;
 1 番目のプロパティを、 `ReadOnly` か `WriteOnly`かの違いしかない 2 番目のプロパティでオーバーライドしようとしました。  
