--- a/docs/visual-basic/misc/bc30392.md
+++ b/docs/visual-basic/misc/bc30392.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33609763"
 ---
 # <a name="39catch39-cannot-catch-type-39lttypenamegt39-because-it-is-not-39systemexception39-or-a-class-that-inherits-from-39systemexception39"></a>&#39;キャッチ&#39;型をキャッチできません&#39; &lt;typename&gt; &#39;ではないため&#39;System.Exception&#39;またはから継承するクラス&#39;System.Exception&#39;
 `Catch` は例外のみをインターセプトできますが、例外から派生していないものを検出しようとしました。  
