--- a/docs/visual-basic/misc/bc30397.md
+++ b/docs/visual-basic/misc/bc30397.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33608749"
 ---
 # <a name="39ltmodifiergt39-is-not-valid-on-an-interface-declaration"></a>&#39;&lt;修飾子&gt;&#39;インターフェイス宣言で無効です
 `Interface` 宣言で無効な修飾子が使用されました。 `Sub`宣言で宣言される `Function`、 `Property` 、または `Interface` ステートメントに有効な修飾子は `Overloads` と `Default` キーワードのみです。 `Public`、 `Private`、 `Friend`、 `Protected`、 `Shared`、 `Static`、 `Overrides`、 `MustOverride` 、 `Overridable`などの他の修飾子は無効です。  
