--- a/docs/visual-basic/misc/bc30414.md
+++ b/docs/visual-basic/misc/bc30414.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611128"
 ---
 # <a name="value-of-type-39lttype1gt39-cannot-be-converted-to-39lttype2gt39-because-the-array-types-have-different-numbers-of-dimensions"></a>型の値&#39; &lt;type1&gt; &#39;に変換できない&#39; &lt;type2&gt; &#39;配列型の次元数が異なるため
 1 つの配列をディメンションの数が異なる別の配列に変換しようとしました。  
