--- a/docs/visual-basic/misc/bc30554.md
+++ b/docs/visual-basic/misc/bc30554.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613258"
 ---
 # <a name="39ltnamespacenamegt39-is-ambiguous"></a>&#39;&lt;namespacename&gt; &#39;があいまいです
 あいまいな名前を指定したため、別の名前と競合しています。 Visual Basic コンパイラが、競合解決規則です。名は、自分で明確する必要があります。  
