--- a/docs/visual-basic/misc/bc30628.md
+++ b/docs/visual-basic/misc/bc30628.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33610296"
 ---
 # <a name="structures-cannot-have-39inherits39-statements"></a>構造体を持てません&#39;Inherits&#39;ステートメント
 クラスとは異なり、構造体は継承をサポートしていません。  
