--- a/docs/visual-basic/misc/bc30629.md
+++ b/docs/visual-basic/misc/bc30629.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33612988"
 ---
 # <a name="structures-cannot-declare-a-non-shared-39sub-new39-with-no-parameters"></a>構造体が非共有を宣言することはできません&#39;Sub New&#39;パラメーターなしで
 構造体の中で宣言された`Sub New` コンストラクターは、引数を受け入れるか、または `Shared` 修飾子で宣言する必要があります。  
