--- a/docs/visual-basic/misc/bc30640.md
+++ b/docs/visual-basic/misc/bc30640.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618473"
 ---
 # <a name="39option-explicit39-can-be-followed-only-by-39on39-or-39off39"></a>&#39;オプションの Explicit&#39;が続きますのみ&#39;で&#39;または&#39;オフ&#39;
 `Option Explicit` ステートメントは `On` または `Off`のどちらかを指定する必要があります。 その他のすべての値は無効です。  
