--- a/docs/visual-basic/misc/bc30672.md
+++ b/docs/visual-basic/misc/bc30672.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614525"
 ---
 # <a name="explicit-initialization-is-not-permitted-for-arrays-declared-with-explicit-bounds"></a>明示的な初期化は、明示的な境界で宣言された配列に対しては許可されていません
 配列は、特定のサイズになるように宣言している場合には初期化できません。  
