--- a/docs/visual-basic/misc/bc30688.md
+++ b/docs/visual-basic/misc/bc30688.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33610309"
 ---
 # <a name="events-in-interfaces-cannot-be-declared-39ltimplementsgt39"></a>インターフェイスのイベントを宣言することはできません&#39;&lt;を実装します。&gt;&#39;
 インターフェイス内で宣言されたイベントは、その他のインターフェイスのイベントを実装できません。  
