--- a/docs/visual-basic/misc/bc30702.md
+++ b/docs/visual-basic/misc/bc30702.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611164"
 ---
 # <a name="index-39ltindexnumbergt39-for-dimension-39ltdimensionnumbergt39-is-out-of-range"></a>インデックス&#39; &lt;indexnumber&gt; &#39;ディメンションの&#39; &lt;dimensionnumber&gt; &#39;が範囲外です
 定義されている範囲を超えているインデックスがあります。  
