--- a/docs/visual-basic/misc/bc31107.md
+++ b/docs/visual-basic/misc/bc31107.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33622068"
 ---
 # <a name="property-accessors-cannot-be-declared-39ltaccessmodifiergt39-in-a-39default39-property"></a>プロパティ アクセサーを宣言することはできません&#39; &lt;accessmodifier&gt; &#39;で、&#39;既定&#39;プロパティ
 A [Get ステートメント](../../visual-basic/language-reference/statements/get-statement.md)または[Set ステートメント](../../visual-basic/language-reference/statements/set-statement.md)既定にはプロパティが含まれています、`Private`キーワード。  
