--- a/docs/visual-basic/misc/bc31171.md
+++ b/docs/visual-basic/misc/bc31171.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33623147"
 ---
 # <a name="character-sequence-39--39-is-not-allowed-in-an-xml-comment"></a>文字のシーケンス&#39;--&#39; XML コメントでは許可されません
 XML コメント リテラルに、サポートされていない文字のシーケンス '--' が含まれています。  
