--- a/docs/visual-basic/misc/bc30097.md
+++ b/docs/visual-basic/misc/bc30097.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33605756"
 ---
 # <a name="39exit-while39-can-only-appear-inside-a-39while39-statement"></a><span data-ttu-id="3d231-102">&#39;Exit While&#39;内でのみ表示できます、&#39;中&#39;ステートメント</span><span class="sxs-lookup"><span data-stu-id="3d231-102">&#39;Exit While&#39; can only appear inside a &#39;While&#39; statement</span></span>
 <span data-ttu-id="3d231-103">`Exit While` ステートメントが `While` ブロックの外側にあります。</span><span class="sxs-lookup"><span data-stu-id="3d231-103">An `Exit While` statement occurs outside a `While` block.</span></span> <span data-ttu-id="3d231-104">`Exit While` は、 `While` ステートメントとそれに対応する `End While` ステートメントとの間でのみ有効です。</span><span class="sxs-lookup"><span data-stu-id="3d231-104">`Exit While` is valid only between a `While` statement and a corresponding `End While` statement.</span></span>  
