--- a/docs/visual-basic/misc/bc30278.md
+++ b/docs/visual-basic/misc/bc30278.md
@@ -1,36 +1,30 @@
 ---
-title: '&#39;です。Sub &#39;または &#39;です。関数 &#39;後に予期される &#39; 委任 &#39;'
+title: '&#39;Sub&#39;または&#39;関数&#39;後に予期される&#39;デリゲート&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30278
 - bc30278
 helpviewer_keywords:
 - BC30278
 ms.assetid: fee206b9-8dc0-436f-9909-abd8c17957f8
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 90e614c7b622bffa1f0cbb71a5e1aa7fc85199a4
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 5aece3e5d68a391b1322f3e1afb94dd91a09c342
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33610280"
 ---
-# <a name="39sub39-or-39function39-expected-after-39delegate39"></a><span data-ttu-id="c3345-102">&#39;です。Sub &#39;または &#39;です。関数 &#39;後に予期される &#39; 委任 &#39;</span><span class="sxs-lookup"><span data-stu-id="c3345-102">&#39;Sub&#39; or &#39;Function&#39; expected after &#39;Delegate&#39;</span></span>
-<span data-ttu-id="c3345-103">`Delegate` ステートメントに、 `Sub` または `Function` プロシージャが指定されていません。</span><span class="sxs-lookup"><span data-stu-id="c3345-103">A `Delegate` statement does not specify a `Sub` or `Function` procedure.</span></span> <span data-ttu-id="c3345-104">`Sub` または `Function` キーワードは、 `Delegate` キーワードの直後に配置する必要があります。</span><span class="sxs-lookup"><span data-stu-id="c3345-104">The `Sub` or `Function` keyword must immediately follow the `Delegate` keyword.</span></span>  
+# <a name="39sub39-or-39function39-expected-after-39delegate39"></a><span data-ttu-id="38c11-102">&#39;Sub&#39;または&#39;関数&#39;後に予期される&#39;デリゲート&#39;</span><span class="sxs-lookup"><span data-stu-id="38c11-102">&#39;Sub&#39; or &#39;Function&#39; expected after &#39;Delegate&#39;</span></span>
+<span data-ttu-id="38c11-103">`Delegate` ステートメントに、 `Sub` または `Function` プロシージャが指定されていません。</span><span class="sxs-lookup"><span data-stu-id="38c11-103">A `Delegate` statement does not specify a `Sub` or `Function` procedure.</span></span> <span data-ttu-id="38c11-104">`Sub` または `Function` キーワードは、 `Delegate` キーワードの直後に配置する必要があります。</span><span class="sxs-lookup"><span data-stu-id="38c11-104">The `Sub` or `Function` keyword must immediately follow the `Delegate` keyword.</span></span>  
   
- <span data-ttu-id="c3345-105">**エラー ID:** BC30278</span><span class="sxs-lookup"><span data-stu-id="c3345-105">**Error ID:** BC30278</span></span>  
+ <span data-ttu-id="38c11-105">**エラー ID:** BC30278</span><span class="sxs-lookup"><span data-stu-id="38c11-105">**Error ID:** BC30278</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c3345-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="c3345-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="38c11-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="38c11-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="c3345-107">`Sub` または `Function` キーワードを `Delegate`の直後に配置します。</span><span class="sxs-lookup"><span data-stu-id="c3345-107">Add the `Sub` or `Function` keyword immediately after `Delegate`.</span></span>  
+1.  <span data-ttu-id="38c11-107">`Sub` または `Function` キーワードを `Delegate`の直後に配置します。</span><span class="sxs-lookup"><span data-stu-id="38c11-107">Add the `Sub` or `Function` keyword immediately after `Delegate`.</span></span>  
   
-2.  <span data-ttu-id="c3345-108">適切なプロシージャ名、引数リスト、および戻り値の型を指定します。</span><span class="sxs-lookup"><span data-stu-id="c3345-108">Specify a procedure name, argument list, and return type as appropriate.</span></span>  
+2.  <span data-ttu-id="38c11-108">適切なプロシージャ名、引数リスト、および戻り値の型を指定します。</span><span class="sxs-lookup"><span data-stu-id="38c11-108">Specify a procedure name, argument list, and return type as appropriate.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c3345-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="c3345-109">See Also</span></span>  
- [<span data-ttu-id="c3345-110">Delegate ステートメント</span><span class="sxs-lookup"><span data-stu-id="c3345-110">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)  
- [<span data-ttu-id="c3345-111">手順</span><span class="sxs-lookup"><span data-stu-id="c3345-111">Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/index.md)
+## <a name="see-also"></a><span data-ttu-id="38c11-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="38c11-109">See Also</span></span>  
+ [<span data-ttu-id="38c11-110">Delegate ステートメント</span><span class="sxs-lookup"><span data-stu-id="38c11-110">Delegate Statement</span></span>](../../visual-basic/language-reference/statements/delegate-statement.md)  
+ [<span data-ttu-id="38c11-111">手順</span><span class="sxs-lookup"><span data-stu-id="38c11-111">Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/index.md)
