--- a/docs/visual-basic/misc/bc30357.md
+++ b/docs/visual-basic/misc/bc30357.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33609019"
 ---
 # <a name="39inherits39-statements-must-precede-all-declarations-in-an-interface"></a><span data-ttu-id="48613-102">&#39;継承&#39;ステートメントは、インターフェイス内のすべての宣言を付ける必要があります</span><span class="sxs-lookup"><span data-stu-id="48613-102">&#39;Inherits&#39; statements must precede all declarations in an interface</span></span>
 <span data-ttu-id="48613-103">`Inherits` ステートメントは、クラス定義の最初の空行でもコメント行でもない行に記述されている必要があります。</span><span class="sxs-lookup"><span data-stu-id="48613-103">An `Inherits` statement must be the first non-blank, non-comment line in a class definition.</span></span>  
