--- a/docs/visual-basic/misc/bc30397.md
+++ b/docs/visual-basic/misc/bc30397.md
@@ -1,33 +1,27 @@
 ---
-title: '&#39;です。&lt;修飾子&gt;&#39; は、Interface 宣言では無効'
+title: '&#39;&lt;修飾子&gt;&#39;インターフェイス宣言で無効です'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30397
 - vbc30397
 helpviewer_keywords:
 - BC30397
 ms.assetid: 9143dc87-c396-4ff9-9987-0b460ee32b38
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 4e01cffee9677fee59a35984d62f848b702ce076
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: e6b294c25239c1877e9ca4a4e8e3a9ebbba10c94
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33608749"
 ---
-# <a name="39ltmodifiergt39-is-not-valid-on-an-interface-declaration"></a><span data-ttu-id="6f83a-102">&#39;です。&lt;修飾子&gt;&#39; は、Interface 宣言では無効</span><span class="sxs-lookup"><span data-stu-id="6f83a-102">&#39;&lt;modifier&gt;&#39; is not valid on an Interface declaration</span></span>
-<span data-ttu-id="6f83a-103">`Interface` 宣言で無効な修飾子が使用されました。</span><span class="sxs-lookup"><span data-stu-id="6f83a-103">You have used a modifier that is not valid on an `Interface` declaration.</span></span> <span data-ttu-id="6f83a-104">`Sub`宣言で宣言される `Function`、 `Property` 、または `Interface` ステートメントに有効な修飾子は `Overloads` と `Default` キーワードのみです。</span><span class="sxs-lookup"><span data-stu-id="6f83a-104">The only valid modifiers for `Sub`, `Function`, or `Property` statements declared in an `Interface` declaration are the `Overloads` and `Default` keywords.</span></span> <span data-ttu-id="6f83a-105">`Public`、 `Private`、 `Friend`、 `Protected`、 `Shared`、 `Static`、 `Overrides`、 `MustOverride` 、 `Overridable`などの他の修飾子は無効です。</span><span class="sxs-lookup"><span data-stu-id="6f83a-105">Other modifiers, such as `Public`, `Private`, `Friend`, `Protected`, `Shared`, `Static`, `Overrides`, `MustOverride` and `Overridable`, are not valid.</span></span>  
+# <a name="39ltmodifiergt39-is-not-valid-on-an-interface-declaration"></a><span data-ttu-id="73ba8-102">&#39;&lt;修飾子&gt;&#39;インターフェイス宣言で無効です</span><span class="sxs-lookup"><span data-stu-id="73ba8-102">&#39;&lt;modifier&gt;&#39; is not valid on an Interface declaration</span></span>
+<span data-ttu-id="73ba8-103">`Interface` 宣言で無効な修飾子が使用されました。</span><span class="sxs-lookup"><span data-stu-id="73ba8-103">You have used a modifier that is not valid on an `Interface` declaration.</span></span> <span data-ttu-id="73ba8-104">`Sub`宣言で宣言される `Function`、 `Property` 、または `Interface` ステートメントに有効な修飾子は `Overloads` と `Default` キーワードのみです。</span><span class="sxs-lookup"><span data-stu-id="73ba8-104">The only valid modifiers for `Sub`, `Function`, or `Property` statements declared in an `Interface` declaration are the `Overloads` and `Default` keywords.</span></span> <span data-ttu-id="73ba8-105">`Public`、 `Private`、 `Friend`、 `Protected`、 `Shared`、 `Static`、 `Overrides`、 `MustOverride` 、 `Overridable`などの他の修飾子は無効です。</span><span class="sxs-lookup"><span data-stu-id="73ba8-105">Other modifiers, such as `Public`, `Private`, `Friend`, `Protected`, `Shared`, `Static`, `Overrides`, `MustOverride` and `Overridable`, are not valid.</span></span>  
   
- <span data-ttu-id="6f83a-106">**エラー ID:** BC30397</span><span class="sxs-lookup"><span data-stu-id="6f83a-106">**Error ID:** BC30397</span></span>  
+ <span data-ttu-id="73ba8-106">**エラー ID:** BC30397</span><span class="sxs-lookup"><span data-stu-id="73ba8-106">**Error ID:** BC30397</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="6f83a-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="6f83a-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="73ba8-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="73ba8-107">To correct this error</span></span>  
   
--   <span data-ttu-id="6f83a-108">修飾子を削除します。</span><span class="sxs-lookup"><span data-stu-id="6f83a-108">Remove the modifier.</span></span>  
+-   <span data-ttu-id="73ba8-108">修飾子を削除します。</span><span class="sxs-lookup"><span data-stu-id="73ba8-108">Remove the modifier.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="6f83a-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="6f83a-109">See Also</span></span>  
- [<span data-ttu-id="6f83a-110">インターフェイス (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="6f83a-110">Interfaces (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/language-features/interfaces/index.md)
+## <a name="see-also"></a><span data-ttu-id="73ba8-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="73ba8-109">See Also</span></span>  
+ [<span data-ttu-id="73ba8-110">インターフェイス (Visual Basic)</span><span class="sxs-lookup"><span data-stu-id="73ba8-110">Interfaces (Visual Basic)</span></span>](~/docs/visual-basic/programming-guide/language-features/interfaces/index.md)
