--- a/docs/visual-basic/misc/bc30554.md
+++ b/docs/visual-basic/misc/bc30554.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613258"
 ---
 # <a name="39ltnamespacenamegt39-is-ambiguous"></a><span data-ttu-id="7f51e-102">&#39;&lt;namespacename&gt; &#39;があいまいです</span><span class="sxs-lookup"><span data-stu-id="7f51e-102">&#39;&lt;namespacename&gt;&#39; is ambiguous</span></span>
 <span data-ttu-id="7f51e-103">あいまいな名前を指定したため、別の名前と競合しています。</span><span class="sxs-lookup"><span data-stu-id="7f51e-103">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="7f51e-104">Visual Basic コンパイラが、競合解決規則です。名は、自分で明確する必要があります。</span><span class="sxs-lookup"><span data-stu-id="7f51e-104">The Visual Basic compiler does not have any conflict-resolution rules; you must disambiguate names yourself.</span></span>  
