--- a/docs/visual-basic/misc/bc30576.md
+++ b/docs/visual-basic/misc/bc30576.md
@@ -1,33 +1,27 @@
 ---
-title: ステートメントを宣言しません、&#39;です。Get &#39;または &#39;です。セット &#39;メソッド
+title: ステートメントを宣言しません、&#39;取得&#39;または&#39;設定&#39;メソッド
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30576
 - vbc30576
 helpviewer_keywords:
 - BC30576
 ms.assetid: 0f5aabd8-7cd0-4eaa-ae92-67be260cf63e
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: ae92576672fc33e91a2829406923094100144413
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: e3e93535ffe43e7a4744d55d64f969525c16bc14
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33610992"
 ---
-# <a name="statement-does-not-declare-a-39get39-or-39set39-method"></a><span data-ttu-id="122ea-102">ステートメントを宣言しません、&#39;です。Get &#39;または &#39;です。セット &#39;メソッド</span><span class="sxs-lookup"><span data-stu-id="122ea-102">Statement does not declare a &#39;Get&#39; or &#39;Set&#39; method</span></span>
-<span data-ttu-id="122ea-103">ステートメントには、 `Get` プロシージャの周囲に `Set` または `Property` 宣言ステートメントが指定されていません。</span><span class="sxs-lookup"><span data-stu-id="122ea-103">Your statement fails to supply either a `Get` or `Set` declaration statement around a `Property` procedure.</span></span> <span data-ttu-id="122ea-104">プロパティは、 `Property` および `End Property` ステートメントの中に囲まれたコードのブロックとして定義します。</span><span class="sxs-lookup"><span data-stu-id="122ea-104">A property is defined as a block of code enclosed within the `Property` and `End Property` statements.</span></span> <span data-ttu-id="122ea-105">このブロック内では、各 `Property` プロシージャが、宣言ステートメントと End ステートメントの中に囲まれた内部ブロックとしてを記述されます。</span><span class="sxs-lookup"><span data-stu-id="122ea-105">Inside this block, each `Property` procedure appears as an internal block enclosed within a declaration statement and an end statement.</span></span>  
+# <a name="statement-does-not-declare-a-39get39-or-39set39-method"></a><span data-ttu-id="2d6ec-102">ステートメントを宣言しません、&#39;取得&#39;または&#39;設定&#39;メソッド</span><span class="sxs-lookup"><span data-stu-id="2d6ec-102">Statement does not declare a &#39;Get&#39; or &#39;Set&#39; method</span></span>
+<span data-ttu-id="2d6ec-103">ステートメントには、 `Get` プロシージャの周囲に `Set` または `Property` 宣言ステートメントが指定されていません。</span><span class="sxs-lookup"><span data-stu-id="2d6ec-103">Your statement fails to supply either a `Get` or `Set` declaration statement around a `Property` procedure.</span></span> <span data-ttu-id="2d6ec-104">プロパティは、 `Property` および `End Property` ステートメントの中に囲まれたコードのブロックとして定義します。</span><span class="sxs-lookup"><span data-stu-id="2d6ec-104">A property is defined as a block of code enclosed within the `Property` and `End Property` statements.</span></span> <span data-ttu-id="2d6ec-105">このブロック内では、各 `Property` プロシージャが、宣言ステートメントと End ステートメントの中に囲まれた内部ブロックとしてを記述されます。</span><span class="sxs-lookup"><span data-stu-id="2d6ec-105">Inside this block, each `Property` procedure appears as an internal block enclosed within a declaration statement and an end statement.</span></span>  
   
- <span data-ttu-id="122ea-106">**エラー ID:** BC30576</span><span class="sxs-lookup"><span data-stu-id="122ea-106">**Error ID:** BC30576</span></span>  
+ <span data-ttu-id="2d6ec-106">**エラー ID:** BC30576</span><span class="sxs-lookup"><span data-stu-id="2d6ec-106">**Error ID:** BC30576</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="122ea-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="122ea-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="2d6ec-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="2d6ec-107">To correct this error</span></span>  
   
--   <span data-ttu-id="122ea-108">`Get` または `Set` 宣言ステートメントを指定します。</span><span class="sxs-lookup"><span data-stu-id="122ea-108">Supply a `Get` or `Set` declaration statement.</span></span>  
+-   <span data-ttu-id="2d6ec-108">`Get` または `Set` 宣言ステートメントを指定します。</span><span class="sxs-lookup"><span data-stu-id="2d6ec-108">Supply a `Get` or `Set` declaration statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="122ea-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="122ea-109">See Also</span></span>  
- [<span data-ttu-id="122ea-110">Property プロシージャ</span><span class="sxs-lookup"><span data-stu-id="122ea-110">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
+## <a name="see-also"></a><span data-ttu-id="2d6ec-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="2d6ec-109">See Also</span></span>  
+ [<span data-ttu-id="2d6ec-110">Property プロシージャ</span><span class="sxs-lookup"><span data-stu-id="2d6ec-110">Property Procedures</span></span>](../../visual-basic/programming-guide/language-features/procedures/property-procedures.md)
