--- a/docs/visual-basic/misc/bc30603.md
+++ b/docs/visual-basic/misc/bc30603.md
@@ -1,36 +1,30 @@
 ---
 title: ステートメントをインターフェイス本体内部に記述することはできません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30603
 - BC30603
 helpviewer_keywords:
 - BC30603
 ms.assetid: 3aef29d6-eadf-4f1f-b214-dfeae5e51c4f
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 35d97a8a5d927b756aa0534cae6de61d58b88fed
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: d27c3f4b24ac242573914fe196fce791a03e035a
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611288"
 ---
-# <a name="statement-cannot-appear-within-an-interface-body"></a><span data-ttu-id="adb2e-102">ステートメントをインターフェイス本体内部に記述することはできません</span><span class="sxs-lookup"><span data-stu-id="adb2e-102">Statement cannot appear within an interface body</span></span>
-<span data-ttu-id="adb2e-103">インターフェイス メンバーの宣言に、メンバーを終了するステートメントが `End`*membername*の形式で含まれています。</span><span class="sxs-lookup"><span data-stu-id="adb2e-103">The declaration of an interface member includes a statement terminating the member, of the form `End`*membername*.</span></span>  
+# <a name="statement-cannot-appear-within-an-interface-body"></a><span data-ttu-id="7c677-102">ステートメントをインターフェイス本体内部に記述することはできません</span><span class="sxs-lookup"><span data-stu-id="7c677-102">Statement cannot appear within an interface body</span></span>
+<span data-ttu-id="7c677-103">インターフェイス メンバーの宣言に、メンバーを終了するステートメントが `End`*membername*の形式で含まれています。</span><span class="sxs-lookup"><span data-stu-id="7c677-103">The declaration of an interface member includes a statement terminating the member, of the form `End`*membername*.</span></span>  
   
- <span data-ttu-id="adb2e-104">インターフェイスは、メンバーのシグネチャのみを定義します。</span><span class="sxs-lookup"><span data-stu-id="adb2e-104">An interface defines only the signature of its members.</span></span> <span data-ttu-id="adb2e-105">そのため、インターフェイスで定義されているプロシージャやプロパティには、名前とシグネチャを指定する最初の行しかありません。</span><span class="sxs-lookup"><span data-stu-id="adb2e-105">Consequently, procedures and properties defined in an interface have only their initial line, specifying the name and signature.</span></span> <span data-ttu-id="adb2e-106">インターフェイスの内部には、コード、内部宣言、または `End Function`、 `End Property`、 `End Sub` ステートメントを含めません。</span><span class="sxs-lookup"><span data-stu-id="adb2e-106">You do not include any code, internal declarations, or an `End Function`, `End Property`, or `End Sub` statement inside the interface.</span></span>  
+ <span data-ttu-id="7c677-104">インターフェイスは、メンバーのシグネチャのみを定義します。</span><span class="sxs-lookup"><span data-stu-id="7c677-104">An interface defines only the signature of its members.</span></span> <span data-ttu-id="7c677-105">そのため、インターフェイスで定義されているプロシージャやプロパティには、名前とシグネチャを指定する最初の行しかありません。</span><span class="sxs-lookup"><span data-stu-id="7c677-105">Consequently, procedures and properties defined in an interface have only their initial line, specifying the name and signature.</span></span> <span data-ttu-id="7c677-106">インターフェイスの内部には、コード、内部宣言、または `End Function`、 `End Property`、 `End Sub` ステートメントを含めません。</span><span class="sxs-lookup"><span data-stu-id="7c677-106">You do not include any code, internal declarations, or an `End Function`, `End Property`, or `End Sub` statement inside the interface.</span></span>  
   
- <span data-ttu-id="adb2e-107">**エラー ID:** BC30603</span><span class="sxs-lookup"><span data-stu-id="adb2e-107">**Error ID:** BC30603</span></span>  
+ <span data-ttu-id="7c677-107">**エラー ID:** BC30603</span><span class="sxs-lookup"><span data-stu-id="7c677-107">**Error ID:** BC30603</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="adb2e-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="adb2e-108">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7c677-108">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="7c677-108">To correct this error</span></span>  
   
--   <span data-ttu-id="adb2e-109">インターフェイス定義から `End`*membername* ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="adb2e-109">Remove the `End`*membername* statement from the interface definition.</span></span>  
+-   <span data-ttu-id="7c677-109">インターフェイス定義から `End`*membername* ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="7c677-109">Remove the `End`*membername* statement from the interface definition.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="adb2e-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="adb2e-110">See Also</span></span>  
- [<span data-ttu-id="adb2e-111">Interface ステートメント</span><span class="sxs-lookup"><span data-stu-id="adb2e-111">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)  
- [<span data-ttu-id="adb2e-112">終了\<キーワード > ステートメント</span><span class="sxs-lookup"><span data-stu-id="adb2e-112">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
+## <a name="see-also"></a><span data-ttu-id="7c677-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="7c677-110">See Also</span></span>  
+ [<span data-ttu-id="7c677-111">Interface ステートメント</span><span class="sxs-lookup"><span data-stu-id="7c677-111">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)  
+ [<span data-ttu-id="7c677-112">終了\<キーワード > ステートメント</span><span class="sxs-lookup"><span data-stu-id="7c677-112">End \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/end-keyword-statement.md)
