--- a/docs/visual-basic/misc/bc31129.md
+++ b/docs/visual-basic/misc/bc31129.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33621060"
 ---
 # <a name="39raiseevent39-is-already-declared"></a><span data-ttu-id="bc321-102">&#39;RaiseEvent&#39;は既に宣言されています</span><span class="sxs-lookup"><span data-stu-id="bc321-102">&#39;RaiseEvent&#39; is already declared</span></span>
 <span data-ttu-id="bc321-103">カスタム イベントの宣言に 2 つ以上の `RaiseEvent` の宣言があります。</span><span class="sxs-lookup"><span data-stu-id="bc321-103">More than one `RaiseEvent` declaration appeared in a custom event declaration.</span></span> <span data-ttu-id="bc321-104">`RaiseEvent` の宣言では、イベントの発生に使用されるプロシージャを宣言します。</span><span class="sxs-lookup"><span data-stu-id="bc321-104">A `RaiseEvent` declaration declares a procedure used to raise the event.</span></span>  
