--- a/docs/visual-basic/misc/bc31141.md
+++ b/docs/visual-basic/misc/bc31141.md
@@ -1,39 +1,33 @@
 ---
 title: Option Strict Custom はコマンドライン コンパイラ (vbc.exe) へのオプションとしてのみ使用することができます
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc31141
 - bc31141
 helpviewer_keywords:
 - BC31141
 ms.assetid: c32ae8ff-aacc-40b4-960a-6f2d5d246671
-caps.latest.revision: 5
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 5add0700684919689a6f891f7c9b56402b45ed86
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: f96fe399ba848a07299fab7ca85ad76189b02791
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33623108"
 ---
-# <a name="option-strict-custom-can-only-be-used-as-an-option-to-the-command-line-compiler-vbcexe"></a><span data-ttu-id="bb776-102">Option Strict Custom はコマンドライン コンパイラ (vbc.exe) へのオプションとしてのみ使用することができます</span><span class="sxs-lookup"><span data-stu-id="bb776-102">Option Strict Custom can only be used as an option to the command-line compiler (vbc.exe)</span></span>
-<span data-ttu-id="bb776-103">`Option Strict` ステートメントは、 `On` と `Off` のみを引数として受け取ることができます。 `Option Strict Custom` は使用できません。</span><span class="sxs-lookup"><span data-stu-id="bb776-103">The `Option Strict` statement takes only `On` and `Off` as arguments; `Option Strict Custom` is not allowed.</span></span>  
+# <a name="option-strict-custom-can-only-be-used-as-an-option-to-the-command-line-compiler-vbcexe"></a><span data-ttu-id="6d515-102">Option Strict Custom はコマンドライン コンパイラ (vbc.exe) へのオプションとしてのみ使用することができます</span><span class="sxs-lookup"><span data-stu-id="6d515-102">Option Strict Custom can only be used as an option to the command-line compiler (vbc.exe)</span></span>
+<span data-ttu-id="6d515-103">`Option Strict` ステートメントは、 `On` と `Off` のみを引数として受け取ることができます。 `Option Strict Custom` は使用できません。</span><span class="sxs-lookup"><span data-stu-id="6d515-103">The `Option Strict` statement takes only `On` and `Off` as arguments; `Option Strict Custom` is not allowed.</span></span>  
   
- <span data-ttu-id="bb776-104">厳密な言語セマンティクスが守られていないときに警告するには、 `/optionstrict:custom` コンパイラ オプションを使用します。</span><span class="sxs-lookup"><span data-stu-id="bb776-104">Use the `/optionstrict:custom` compiler option to warn when strict language semantics are not respected.</span></span>  
+ <span data-ttu-id="6d515-104">厳密な言語セマンティクスが守られていないときに警告するには、 `/optionstrict:custom` コンパイラ オプションを使用します。</span><span class="sxs-lookup"><span data-stu-id="6d515-104">Use the `/optionstrict:custom` compiler option to warn when strict language semantics are not respected.</span></span>  
   
- <span data-ttu-id="bb776-105">**エラー ID:** BC31141</span><span class="sxs-lookup"><span data-stu-id="bb776-105">**Error ID:** BC31141</span></span>  
+ <span data-ttu-id="6d515-105">**エラー ID:** BC31141</span><span class="sxs-lookup"><span data-stu-id="6d515-105">**Error ID:** BC31141</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="bb776-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="bb776-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="6d515-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="6d515-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="bb776-107">ソース コードから `Option Strict Custom` を削除します。</span><span class="sxs-lookup"><span data-stu-id="bb776-107">Remove `Option Strict Custom` from the source code.</span></span>  
+1.  <span data-ttu-id="6d515-107">ソース コードから `Option Strict Custom` を削除します。</span><span class="sxs-lookup"><span data-stu-id="6d515-107">Remove `Option Strict Custom` from the source code.</span></span>  
   
-2.  <span data-ttu-id="bb776-108">`/optionstrict:custom` オプションを指定します。</span><span class="sxs-lookup"><span data-stu-id="bb776-108">Specify the `/optionstrict:custom` option.</span></span> <span data-ttu-id="bb776-109">詳細については、「 [/optionstrict](../../visual-basic/reference/command-line-compiler/optionstrict.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="bb776-109">For more information, see [/optionstrict](../../visual-basic/reference/command-line-compiler/optionstrict.md).</span></span>  
+2.  <span data-ttu-id="6d515-108">`/optionstrict:custom` オプションを指定します。</span><span class="sxs-lookup"><span data-stu-id="6d515-108">Specify the `/optionstrict:custom` option.</span></span> <span data-ttu-id="6d515-109">詳細については、「[/optionstrict](../../visual-basic/reference/command-line-compiler/optionstrict.md)」を参照してください。</span><span class="sxs-lookup"><span data-stu-id="6d515-109">For more information, see [/optionstrict](../../visual-basic/reference/command-line-compiler/optionstrict.md).</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="bb776-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="bb776-110">See Also</span></span>  
- [<span data-ttu-id="bb776-111">オプション\<キーワード > ステートメント</span><span class="sxs-lookup"><span data-stu-id="bb776-111">Option \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/option-keyword-statement.md)  
- [<span data-ttu-id="bb776-112">Option Strict ステートメント</span><span class="sxs-lookup"><span data-stu-id="bb776-112">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)  
- [<span data-ttu-id="bb776-113">/optionstrict</span><span class="sxs-lookup"><span data-stu-id="bb776-113">/optionstrict</span></span>](../../visual-basic/reference/command-line-compiler/optionstrict.md)
+## <a name="see-also"></a><span data-ttu-id="6d515-110">関連項目</span><span class="sxs-lookup"><span data-stu-id="6d515-110">See Also</span></span>  
+ [<span data-ttu-id="6d515-111">オプション\<キーワード > ステートメント</span><span class="sxs-lookup"><span data-stu-id="6d515-111">Option \<keyword> Statement</span></span>](../../visual-basic/language-reference/statements/option-keyword-statement.md)  
+ [<span data-ttu-id="6d515-112">Option Strict ステートメント</span><span class="sxs-lookup"><span data-stu-id="6d515-112">Option Strict Statement</span></span>](../../visual-basic/language-reference/statements/option-strict-statement.md)  
+ [<span data-ttu-id="6d515-113">/optionstrict</span><span class="sxs-lookup"><span data-stu-id="6d515-113">/optionstrict</span></span>](../../visual-basic/reference/command-line-compiler/optionstrict.md)
