--- a/docs/visual-basic/misc/bc30094.md
+++ b/docs/visual-basic/misc/bc30094.md
@@ -1,34 +1,28 @@
 ---
-title: ラベル &#39;&lt;labelname&gt;&#39; は、現在のメソッドの複数行ラムダで既に定義
+title: ラベル&#39; &lt;labelname&gt; &#39;は現在のメソッドの複数行ラムダで既に定義
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30094
 - vbc30094
 helpviewer_keywords:
 - BC30094
 ms.assetid: e3771a22-1205-41ab-8e64-12ef679cb376
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: a438223606665e595736e3b7201f28e1b8317c46
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: f083c08b4b44d23a6a47d62ceaeede6d98bf3c28
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618408"
 ---
-# <a name="label-39ltlabelnamegt39-is-already-defined-in-the-current-methodmultiline-lambda"></a><span data-ttu-id="a1029-102">ラベル &#39;&lt;labelname&gt;&#39; は、現在のメソッドや複数行ラムダで既に定義</span><span class="sxs-lookup"><span data-stu-id="a1029-102">Label &#39;&lt;labelname&gt;&#39; is already defined in the current method/multiline lambda</span></span>
-<span data-ttu-id="a1029-103">ラベル名がプロシージャ内で重複しています。</span><span class="sxs-lookup"><span data-stu-id="a1029-103">The label name is duplicated within the procedure.</span></span> <span data-ttu-id="a1029-104">プロシージャ内のすべての名前は一意である必要があります。</span><span class="sxs-lookup"><span data-stu-id="a1029-104">All names within a procedure must be unique.</span></span>  
+# <a name="label-39ltlabelnamegt39-is-already-defined-in-the-current-methodmultiline-lambda"></a><span data-ttu-id="4dcff-102">ラベル&#39; &lt;labelname&gt; &#39;は、現在のメソッドや複数行ラムダで既に定義</span><span class="sxs-lookup"><span data-stu-id="4dcff-102">Label &#39;&lt;labelname&gt;&#39; is already defined in the current method/multiline lambda</span></span>
+<span data-ttu-id="4dcff-103">ラベル名がプロシージャ内で重複しています。</span><span class="sxs-lookup"><span data-stu-id="4dcff-103">The label name is duplicated within the procedure.</span></span> <span data-ttu-id="4dcff-104">プロシージャ内のすべての名前は一意である必要があります。</span><span class="sxs-lookup"><span data-stu-id="4dcff-104">All names within a procedure must be unique.</span></span>  
   
- <span data-ttu-id="a1029-105">**エラー ID:** BC30094</span><span class="sxs-lookup"><span data-stu-id="a1029-105">**Error ID:** BC30094</span></span>  
+ <span data-ttu-id="4dcff-105">**エラー ID:** BC30094</span><span class="sxs-lookup"><span data-stu-id="4dcff-105">**Error ID:** BC30094</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="a1029-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="a1029-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="4dcff-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="4dcff-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="a1029-107">重複したラベルの名前を変更します。</span><span class="sxs-lookup"><span data-stu-id="a1029-107">Rename the duplicate label.</span></span>  
+1.  <span data-ttu-id="4dcff-107">重複したラベルの名前を変更します。</span><span class="sxs-lookup"><span data-stu-id="4dcff-107">Rename the duplicate label.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="a1029-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="a1029-108">See Also</span></span>  
- [<span data-ttu-id="a1029-109">Declared Element Names</span><span class="sxs-lookup"><span data-stu-id="a1029-109">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)  
- [<span data-ttu-id="a1029-110">方法 : ステートメントへのラベル付け</span><span class="sxs-lookup"><span data-stu-id="a1029-110">How to: Label Statements</span></span>](../../visual-basic/programming-guide/program-structure/how-to-label-statements.md)
+## <a name="see-also"></a><span data-ttu-id="4dcff-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="4dcff-108">See Also</span></span>  
+ [<span data-ttu-id="4dcff-109">Declared Element Names</span><span class="sxs-lookup"><span data-stu-id="4dcff-109">Declared Element Names</span></span>](../../visual-basic/programming-guide/language-features/declared-elements/declared-element-names.md)  
+ [<span data-ttu-id="4dcff-110">方法 : ステートメントへのラベル付け</span><span class="sxs-lookup"><span data-stu-id="4dcff-110">How to: Label Statements</span></span>](../../visual-basic/programming-guide/program-structure/how-to-label-statements.md)
