--- a/docs/visual-basic/misc/bc30110.md
+++ b/docs/visual-basic/misc/bc30110.md
@@ -1,33 +1,27 @@
 ---
-title: '&#39;です。&lt;typename&gt;&#39; は構造体型であり、式として使用することはできません'
+title: '&#39;&lt;typename&gt; &#39;構造型であり、式として使用することはできません'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30110
 - bc30110
 helpviewer_keywords:
 - BC30110
 ms.assetid: 7971ba3a-e5af-4de3-bc3e-80b06f7b30fd
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 2eb96e220065297128108296bb0bbb54499e83c1
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 1f972c11f65a747b330f0c387216635c3d46abdc
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33609796"
 ---
-# <a name="39lttypenamegt39-is-a-structure-type-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="cb9be-102">&#39;です。&lt;typename&gt;&#39; は構造体型であり、式として使用することはできません</span><span class="sxs-lookup"><span data-stu-id="cb9be-102">&#39;&lt;typename&gt;&#39; is a structure type and cannot be used as an expression</span></span>
-<span data-ttu-id="cb9be-103">式が必要な個所で、型名が出現しています。</span><span class="sxs-lookup"><span data-stu-id="cb9be-103">A type name occurs where an expression is required.</span></span> <span data-ttu-id="cb9be-104">式は、変数、定数、リテラル、プロパティ、および `Function` プロシージャ呼び出しを適宜組み合わせて構成する必要があります。</span><span class="sxs-lookup"><span data-stu-id="cb9be-104">An expression must consist of some combination of variables, constants, literals, properties, and `Function` procedure calls.</span></span>  
+# <a name="39lttypenamegt39-is-a-structure-type-and-cannot-be-used-as-an-expression"></a><span data-ttu-id="84e13-102">&#39;&lt;typename&gt; &#39;構造型であり、式として使用することはできません</span><span class="sxs-lookup"><span data-stu-id="84e13-102">&#39;&lt;typename&gt;&#39; is a structure type and cannot be used as an expression</span></span>
+<span data-ttu-id="84e13-103">式が必要な個所で、型名が出現しています。</span><span class="sxs-lookup"><span data-stu-id="84e13-103">A type name occurs where an expression is required.</span></span> <span data-ttu-id="84e13-104">式は、変数、定数、リテラル、プロパティ、および `Function` プロシージャ呼び出しを適宜組み合わせて構成する必要があります。</span><span class="sxs-lookup"><span data-stu-id="84e13-104">An expression must consist of some combination of variables, constants, literals, properties, and `Function` procedure calls.</span></span>  
   
- <span data-ttu-id="cb9be-105">**エラー ID:** BC30110</span><span class="sxs-lookup"><span data-stu-id="cb9be-105">**Error ID:** BC30110</span></span>  
+ <span data-ttu-id="84e13-105">**エラー ID:** BC30110</span><span class="sxs-lookup"><span data-stu-id="84e13-105">**Error ID:** BC30110</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="cb9be-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="cb9be-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="84e13-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="84e13-106">To correct this error</span></span>  
   
--   <span data-ttu-id="cb9be-107">型名を削除し、有効な要素を使用して式を作成します。</span><span class="sxs-lookup"><span data-stu-id="cb9be-107">Remove the type name and construct the expression using valid elements.</span></span>  
+-   <span data-ttu-id="84e13-107">型名を削除し、有効な要素を使用して式を作成します。</span><span class="sxs-lookup"><span data-stu-id="84e13-107">Remove the type name and construct the expression using valid elements.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="cb9be-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="cb9be-108">See Also</span></span>  
- [<span data-ttu-id="cb9be-109">演算子および式</span><span class="sxs-lookup"><span data-stu-id="cb9be-109">Operators and Expressions</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
+## <a name="see-also"></a><span data-ttu-id="84e13-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="84e13-108">See Also</span></span>  
+ [<span data-ttu-id="84e13-109">演算子および式</span><span class="sxs-lookup"><span data-stu-id="84e13-109">Operators and Expressions</span></span>](../../visual-basic/programming-guide/language-features/operators-and-expressions/index.md)
