--- a/docs/visual-basic/misc/bc30125.md
+++ b/docs/visual-basic/misc/bc30125.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33607486"
 ---
 # <a name="39writeonly39-property-must-provide-a-39set39"></a><span data-ttu-id="04262-102">&#39;WriteOnly&#39;プロパティを提供する必要があります、&#39;設定&#39;</span><span class="sxs-lookup"><span data-stu-id="04262-102">&#39;WriteOnly&#39; property must provide a &#39;Set&#39;</span></span>
 <span data-ttu-id="04262-103">プロパティが `WriteOnly`として宣言されている場合は、その値を書き込むためのプロシージャを指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="04262-103">If a property is declared as `WriteOnly`, it must supply a procedure for writing its value.</span></span>  
