--- a/docs/visual-basic/misc/bc30178.md
+++ b/docs/visual-basic/misc/bc30178.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611203"
 ---
 # <a name="specifier-is-duplicated"></a><span data-ttu-id="11b99-102">指定子が重複しています。</span><span class="sxs-lookup"><span data-stu-id="11b99-102">Specifier is duplicated</span></span>
 <span data-ttu-id="11b99-103">同じ宣言内で複数回出現するキーワードがあります。</span><span class="sxs-lookup"><span data-stu-id="11b99-103">A keyword appears more than once in the same declaration.</span></span>  
