--- a/docs/visual-basic/misc/bc30231.md
+++ b/docs/visual-basic/misc/bc30231.md
@@ -1,34 +1,28 @@
 ---
-title: '&#39; implements &#39;モジュールでは無効です。'
+title: '&#39;実装して&#39;モジュールでは無効です'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30231
 - vbc30231
 helpviewer_keywords:
 - BC30231
 ms.assetid: 16e6c3ea-ce89-4646-8c3f-0ef51324bc13
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 0f056a58a22efa8bdd997b3133e44ab9f3fd7643
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 63f6b491cf70af336b79b5cb296940540b9dc832
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33607911"
 ---
-# <a name="39implements39-not-valid-in-modules"></a><span data-ttu-id="11e72-102">&#39; implements &#39;モジュールでは無効です。</span><span class="sxs-lookup"><span data-stu-id="11e72-102">&#39;Implements&#39; not valid in Modules</span></span>
-<span data-ttu-id="11e72-103">モジュール内に `Implements` ステートメントまたは句が出現しています。</span><span class="sxs-lookup"><span data-stu-id="11e72-103">An `Implements` statement or clause occurs inside a module.</span></span> <span data-ttu-id="11e72-104">モジュールは、インターフェイスを実装できません。</span><span class="sxs-lookup"><span data-stu-id="11e72-104">Modules cannot implement interfaces.</span></span>  
+# <a name="39implements39-not-valid-in-modules"></a><span data-ttu-id="12cb7-102">&#39;実装して&#39;モジュールでは無効です</span><span class="sxs-lookup"><span data-stu-id="12cb7-102">&#39;Implements&#39; not valid in Modules</span></span>
+<span data-ttu-id="12cb7-103">モジュール内に `Implements` ステートメントまたは句が出現しています。</span><span class="sxs-lookup"><span data-stu-id="12cb7-103">An `Implements` statement or clause occurs inside a module.</span></span> <span data-ttu-id="12cb7-104">モジュールは、インターフェイスを実装できません。</span><span class="sxs-lookup"><span data-stu-id="12cb7-104">Modules cannot implement interfaces.</span></span>  
   
- <span data-ttu-id="11e72-105">**エラー ID:** BC30231</span><span class="sxs-lookup"><span data-stu-id="11e72-105">**Error ID:** BC30231</span></span>  
+ <span data-ttu-id="12cb7-105">**エラー ID:** BC30231</span><span class="sxs-lookup"><span data-stu-id="12cb7-105">**Error ID:** BC30231</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="11e72-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="11e72-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="12cb7-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="12cb7-106">To correct this error</span></span>  
   
--   <span data-ttu-id="11e72-107">`Implements` ステートメントまたは句を削除するか、モジュールをクラスとしてもう一度入力してください。</span><span class="sxs-lookup"><span data-stu-id="11e72-107">Remove the `Implements` statement or clause, or retype the module as a class.</span></span>  
+-   <span data-ttu-id="12cb7-107">`Implements` ステートメントまたは句を削除するか、モジュールをクラスとしてもう一度入力してください。</span><span class="sxs-lookup"><span data-stu-id="12cb7-107">Remove the `Implements` statement or clause, or retype the module as a class.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="11e72-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="11e72-108">See Also</span></span>  
- [<span data-ttu-id="11e72-109">Implements ステートメント</span><span class="sxs-lookup"><span data-stu-id="11e72-109">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)  
- [<span data-ttu-id="11e72-110">Module ステートメント</span><span class="sxs-lookup"><span data-stu-id="11e72-110">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
+## <a name="see-also"></a><span data-ttu-id="12cb7-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="12cb7-108">See Also</span></span>  
+ [<span data-ttu-id="12cb7-109">Implements ステートメント</span><span class="sxs-lookup"><span data-stu-id="12cb7-109">Implements Statement</span></span>](../../visual-basic/language-reference/statements/implements-statement.md)  
+ [<span data-ttu-id="12cb7-110">Module ステートメント</span><span class="sxs-lookup"><span data-stu-id="12cb7-110">Module Statement</span></span>](../../visual-basic/language-reference/statements/module-statement.md)
