--- a/docs/visual-basic/misc/bc30252.md
+++ b/docs/visual-basic/misc/bc30252.md
@@ -1,35 +1,29 @@
 ---
-title: '&#39;です。End Interface &#39;一致する &#39; インターフェイス &#39; の前が必要'
+title: '&#39;End Interface&#39;前に、対応する必要がある&#39;インターフェイス&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30252
 - bc30252
 helpviewer_keywords:
 - BC30252
 ms.assetid: 1a2c3278-5dd7-4a72-9dca-3f2a5bdfd04c
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 67ee3df6bdc2fb6401ffcef357d6bb6e9bc7332c
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 5495d9c21b316c999105aa831e1feb6075e0adc6
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33609835"
 ---
-# <a name="39end-interface39-must-be-preceded-by-a-matching-39interface39"></a><span data-ttu-id="da999-102">&#39;です。End Interface &#39;一致する &#39; インターフェイス &#39; の前が必要</span><span class="sxs-lookup"><span data-stu-id="da999-102">&#39;End Interface&#39; must be preceded by a matching &#39;Interface&#39;</span></span>
-<span data-ttu-id="da999-103">`End Interface` ステートメントがあるのに、対応する `Interface` ステートメントがありません。</span><span class="sxs-lookup"><span data-stu-id="da999-103">An `End Interface` statement occurs without a corresponding `Interface` statement.</span></span> <span data-ttu-id="da999-104">`End Interface` の前に、対応する `Interface` ステートメントが必要です。</span><span class="sxs-lookup"><span data-stu-id="da999-104">`End Interface` must be preceded by a corresponding `Interface` statement.</span></span>  
+# <a name="39end-interface39-must-be-preceded-by-a-matching-39interface39"></a><span data-ttu-id="101e2-102">&#39;End Interface&#39;前に、対応する必要がある&#39;インターフェイス&#39;</span><span class="sxs-lookup"><span data-stu-id="101e2-102">&#39;End Interface&#39; must be preceded by a matching &#39;Interface&#39;</span></span>
+<span data-ttu-id="101e2-103">`End Interface` ステートメントがあるのに、対応する `Interface` ステートメントがありません。</span><span class="sxs-lookup"><span data-stu-id="101e2-103">An `End Interface` statement occurs without a corresponding `Interface` statement.</span></span> <span data-ttu-id="101e2-104">`End Interface` の前に、対応する `Interface` ステートメントが必要です。</span><span class="sxs-lookup"><span data-stu-id="101e2-104">`End Interface` must be preceded by a corresponding `Interface` statement.</span></span>  
   
- <span data-ttu-id="da999-105">**エラー ID:** BC30252</span><span class="sxs-lookup"><span data-stu-id="da999-105">**Error ID:** BC30252</span></span>  
+ <span data-ttu-id="101e2-105">**エラー ID:** BC30252</span><span class="sxs-lookup"><span data-stu-id="101e2-105">**Error ID:** BC30252</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="da999-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="da999-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="101e2-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="101e2-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="da999-107">先行する `Interface` ステートメントのスペルが間違っていないこと、およびステートメントが正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="da999-107">Check to see if a preceding `Interface` statement is misspelled or otherwise invalid.</span></span>  
+1.  <span data-ttu-id="101e2-107">先行する `Interface` ステートメントのスペルが間違っていないこと、およびステートメントが正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="101e2-107">Check to see if a preceding `Interface` statement is misspelled or otherwise invalid.</span></span>  
   
-2.  <span data-ttu-id="da999-108">`Interface` メンバーの書式設定が正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="da999-108">Ensure that the `Interface` members are correctly formatted.</span></span>  
+2.  <span data-ttu-id="101e2-108">`Interface` メンバーの書式設定が正しいことを確認します。</span><span class="sxs-lookup"><span data-stu-id="101e2-108">Ensure that the `Interface` members are correctly formatted.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="da999-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="da999-109">See Also</span></span>  
- [<span data-ttu-id="da999-110">Interface ステートメント</span><span class="sxs-lookup"><span data-stu-id="da999-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
+## <a name="see-also"></a><span data-ttu-id="101e2-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="101e2-109">See Also</span></span>  
+ [<span data-ttu-id="101e2-110">Interface ステートメント</span><span class="sxs-lookup"><span data-stu-id="101e2-110">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
