--- a/docs/visual-basic/misc/bc30280.md
+++ b/docs/visual-basic/misc/bc30280.md
@@ -1,33 +1,27 @@
 ---
-title: Enum &#39;&lt;enumname&gt;&#39; には、少なくとも 1 つのメンバーを含める必要があります
+title: Enum &#39; &lt;enumname&gt; &#39;には、少なくとも 1 つのメンバーを含める必要があります
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30280
 - vbc30280
 helpviewer_keywords:
 - BC30280
 ms.assetid: eece372a-f87f-4270-ba66-5ff68f0dfb5e
-caps.latest.revision: 7
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: cd09adb53d9457a47c9e78677e0ec2d967295e72
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 6cdff2c82dcd27fbb446728b24f55e2bc1c20a78
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33608025"
 ---
-# <a name="enum-39ltenumnamegt39-must-contain-at-least-one-member"></a><span data-ttu-id="184fa-102">Enum &#39;&lt;enumname&gt;&#39; には、少なくとも 1 つのメンバーを含める必要があります</span><span class="sxs-lookup"><span data-stu-id="184fa-102">Enum &#39;&lt;enumname&gt;&#39; must contain at least one member</span></span>
-<span data-ttu-id="184fa-103">空の列挙型があります。</span><span class="sxs-lookup"><span data-stu-id="184fa-103">An empty enumeration occurs.</span></span> <span data-ttu-id="184fa-104">少なくとも 1 つのメンバーを `Enum` ステートメントと `End Enum` ステートメントの間で宣言する必要があります。</span><span class="sxs-lookup"><span data-stu-id="184fa-104">At least one member must be declared between the `Enum` statement and the `End Enum` statement.</span></span>  
+# <a name="enum-39ltenumnamegt39-must-contain-at-least-one-member"></a><span data-ttu-id="3d0ea-102">Enum &#39; &lt;enumname&gt; &#39;には、少なくとも 1 つのメンバーを含める必要があります</span><span class="sxs-lookup"><span data-stu-id="3d0ea-102">Enum &#39;&lt;enumname&gt;&#39; must contain at least one member</span></span>
+<span data-ttu-id="3d0ea-103">空の列挙型があります。</span><span class="sxs-lookup"><span data-stu-id="3d0ea-103">An empty enumeration occurs.</span></span> <span data-ttu-id="3d0ea-104">少なくとも 1 つのメンバーを `Enum` ステートメントと `End Enum` ステートメントの間で宣言する必要があります。</span><span class="sxs-lookup"><span data-stu-id="3d0ea-104">At least one member must be declared between the `Enum` statement and the `End Enum` statement.</span></span>  
   
- <span data-ttu-id="184fa-105">**エラー ID:** BC30280</span><span class="sxs-lookup"><span data-stu-id="184fa-105">**Error ID:** BC30280</span></span>  
+ <span data-ttu-id="3d0ea-105">**エラー ID:** BC30280</span><span class="sxs-lookup"><span data-stu-id="3d0ea-105">**Error ID:** BC30280</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="184fa-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="184fa-106">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="3d0ea-106">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="3d0ea-106">To correct this error</span></span>  
   
-1.  <span data-ttu-id="184fa-107">列挙体にメンバーの宣言を追加します。</span><span class="sxs-lookup"><span data-stu-id="184fa-107">Add a member declaration to the enumeration.</span></span>  
+1.  <span data-ttu-id="3d0ea-107">列挙体にメンバーの宣言を追加します。</span><span class="sxs-lookup"><span data-stu-id="3d0ea-107">Add a member declaration to the enumeration.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="184fa-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="184fa-108">See Also</span></span>  
- [<span data-ttu-id="184fa-109">Enum ステートメント</span><span class="sxs-lookup"><span data-stu-id="184fa-109">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
+## <a name="see-also"></a><span data-ttu-id="3d0ea-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="3d0ea-108">See Also</span></span>  
+ [<span data-ttu-id="3d0ea-109">Enum ステートメント</span><span class="sxs-lookup"><span data-stu-id="3d0ea-109">Enum Statement</span></span>](../../visual-basic/language-reference/statements/enum-statement.md)
