--- a/docs/visual-basic/misc/bc30287.md
+++ b/docs/visual-basic/misc/bc30287.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33608701"
 ---
 # <a name="3939-expected"></a><span data-ttu-id="b75e7-102">&#39;.&#39;が必要です</span><span class="sxs-lookup"><span data-stu-id="b75e7-102">&#39;.&#39; expected</span></span>
 <span data-ttu-id="b75e7-103">コードには、感嘆符 ( `Handles` ) が含まれている`!`句があります。</span><span class="sxs-lookup"><span data-stu-id="b75e7-103">The code has a `Handles` clause that contains an exclamation point (`!`).</span></span>  
