--- a/docs/visual-basic/misc/bc30362.md
+++ b/docs/visual-basic/misc/bc30362.md
@@ -1,34 +1,28 @@
 ---
-title: '&#39;です。&lt;propertyname1&gt;&#39; できません上書き &#39;&lt;propertyname2&gt;&#39;が異なるためです。 (& a) #39 です。読み取り専用 &#39;または &#39;です。WriteOnly &#39;'
+title: '&#39;&lt;propertyname1&gt; &#39;オーバーライドできません&#39; &lt;propertyname2&gt; &#39;が異なるため、 &#39;ReadOnly&#39;または&#39;WriteOnly&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30362
 - bc30362
 helpviewer_keywords:
 - BC30362
 ms.assetid: 883deb25-e6db-403e-8c03-f580baf1afa9
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 48da655d85c4ecdc61058cce8acf6b23963e431d
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 8aec0c20a2965bc342ea5ecdb2ddb64950480d2d
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614083"
 ---
-# <a name="39ltpropertyname1gt39-cannot-override-39ltpropertyname2gt39-because-they-differ-by-39readonly39-or-39writeonly39"></a><span data-ttu-id="e2083-102">&#39;です。&lt;propertyname1&gt;&#39; できません上書き &#39;&lt;propertyname2&gt;&#39;が異なるためです。 (& a) #39 です。読み取り専用 &#39;または &#39;です。WriteOnly &#39;</span><span class="sxs-lookup"><span data-stu-id="e2083-102">&#39;&lt;propertyname1&gt;&#39; cannot override &#39;&lt;propertyname2&gt;&#39; because they differ by &#39;ReadOnly&#39; or &#39;WriteOnly&#39;</span></span>
-<span data-ttu-id="e2083-103">1 番目のプロパティを、 `ReadOnly` か `WriteOnly`かの違いしかない 2 番目のプロパティでオーバーライドしようとしました。</span><span class="sxs-lookup"><span data-stu-id="e2083-103">You have attempted to override a property with a second property that differs from the first only by `ReadOnly` or `WriteOnly`.</span></span>  
+# <a name="39ltpropertyname1gt39-cannot-override-39ltpropertyname2gt39-because-they-differ-by-39readonly39-or-39writeonly39"></a><span data-ttu-id="7d2d5-102">&#39;&lt;propertyname1&gt; &#39;オーバーライドできません&#39; &lt;propertyname2&gt; &#39;が異なるため、 &#39;ReadOnly&#39;または&#39;WriteOnly&#39;</span><span class="sxs-lookup"><span data-stu-id="7d2d5-102">&#39;&lt;propertyname1&gt;&#39; cannot override &#39;&lt;propertyname2&gt;&#39; because they differ by &#39;ReadOnly&#39; or &#39;WriteOnly&#39;</span></span>
+<span data-ttu-id="7d2d5-103">1 番目のプロパティを、 `ReadOnly` か `WriteOnly`かの違いしかない 2 番目のプロパティでオーバーライドしようとしました。</span><span class="sxs-lookup"><span data-stu-id="7d2d5-103">You have attempted to override a property with a second property that differs from the first only by `ReadOnly` or `WriteOnly`.</span></span>  
   
- <span data-ttu-id="e2083-104">**エラー ID:** BC30362</span><span class="sxs-lookup"><span data-stu-id="e2083-104">**Error ID:** BC30362</span></span>  
+ <span data-ttu-id="7d2d5-104">**エラー ID:** BC30362</span><span class="sxs-lookup"><span data-stu-id="7d2d5-104">**Error ID:** BC30362</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="e2083-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="e2083-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="7d2d5-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="7d2d5-105">To correct this error</span></span>  
   
--   <span data-ttu-id="e2083-106">プロパティどうしの間に `ReadOnly` と `WriteOnly`以外の違いがあるようにします。</span><span class="sxs-lookup"><span data-stu-id="e2083-106">Make sure the properties are differentiated by more than `ReadOnly` and `WriteOnly`.</span></span>  
+-   <span data-ttu-id="7d2d5-106">プロパティどうしの間に `ReadOnly` と `WriteOnly`以外の違いがあるようにします。</span><span class="sxs-lookup"><span data-stu-id="7d2d5-106">Make sure the properties are differentiated by more than `ReadOnly` and `WriteOnly`.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="e2083-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="e2083-107">See Also</span></span>  
- [<span data-ttu-id="e2083-108">派生クラスのプロパティとメソッドをオーバーライドします。</span><span class="sxs-lookup"><span data-stu-id="e2083-108">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)  
- [<span data-ttu-id="e2083-109">Overrides</span><span class="sxs-lookup"><span data-stu-id="e2083-109">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)
+## <a name="see-also"></a><span data-ttu-id="7d2d5-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="7d2d5-107">See Also</span></span>  
+ [<span data-ttu-id="7d2d5-108">派生クラスのプロパティとメソッドをオーバーライドします。</span><span class="sxs-lookup"><span data-stu-id="7d2d5-108">Overriding properties and methods in derived classes</span></span>](~/docs/visual-basic/programming-guide/language-features/objects-and-classes/inheritance-basics.md#overriding-properties-and-methods-in-derived-classes)  
+ [<span data-ttu-id="7d2d5-109">Overrides</span><span class="sxs-lookup"><span data-stu-id="7d2d5-109">Overrides</span></span>](../../visual-basic/language-reference/modifiers/overrides.md)
