--- a/docs/visual-basic/misc/bc30392.md
+++ b/docs/visual-basic/misc/bc30392.md
@@ -1,34 +1,28 @@
 ---
-title: "&#39;です。Catch &#39;型 &#39; キャッチできません。&lt;typename&gt;&#39;ではないためです。 (& a) #39 です。System.Exception &#39;継承するクラスを &#39; のまたはSystem.Exception &#39;"
+title: '&#39;キャッチ&#39;型をキャッチできません&#39; &lt;typename&gt; &#39;ではないため&#39;System.Exception&#39;またはから継承するクラス&#39;System.Exception&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30392
 - bc30392
 helpviewer_keywords:
 - BC30392
 ms.assetid: 1d513d1d-38f5-4b4e-95bb-9f1209553803
-caps.latest.revision: 
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 2d4f8d9788fc4601d5dc10f173ebda26dc10d8a8
-ms.sourcegitcommit: 34ec7753acf76f90a0fa845235ef06663dc9e36e
+ms.openlocfilehash: 346f65d79239adab4af4385675a0c6e1c92fa0ca
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 12/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33609763"
 ---
-# <a name="39catch39-cannot-catch-type-39lttypenamegt39-because-it-is-not-39systemexception39-or-a-class-that-inherits-from-39systemexception39"></a><span data-ttu-id="9c9b5-102">&#39;です。Catch &#39;型 &#39; キャッチできません。&lt;typename&gt;&#39;ではないためです。 (& a) #39 です。System.Exception &#39;継承するクラスを &#39; のまたはSystem.Exception &#39;</span><span class="sxs-lookup"><span data-stu-id="9c9b5-102">&#39;Catch&#39; cannot catch type &#39;&lt;typename&gt;&#39; because it is not &#39;System.Exception&#39; or a class that inherits from &#39;System.Exception&#39;</span></span>
-<span data-ttu-id="9c9b5-103">`Catch` は例外のみをインターセプトできますが、例外から派生していないものを検出しようとしました。</span><span class="sxs-lookup"><span data-stu-id="9c9b5-103">`Catch` can only intercept exceptions, and you have attempted to catch something that is not derived from an exception.</span></span>  
+# <a name="39catch39-cannot-catch-type-39lttypenamegt39-because-it-is-not-39systemexception39-or-a-class-that-inherits-from-39systemexception39"></a><span data-ttu-id="ba7e9-102">&#39;キャッチ&#39;型をキャッチできません&#39; &lt;typename&gt; &#39;ではないため&#39;System.Exception&#39;またはから継承するクラス&#39;System.Exception&#39;</span><span class="sxs-lookup"><span data-stu-id="ba7e9-102">&#39;Catch&#39; cannot catch type &#39;&lt;typename&gt;&#39; because it is not &#39;System.Exception&#39; or a class that inherits from &#39;System.Exception&#39;</span></span>
+<span data-ttu-id="ba7e9-103">`Catch` は例外のみをインターセプトできますが、例外から派生していないものを検出しようとしました。</span><span class="sxs-lookup"><span data-stu-id="ba7e9-103">`Catch` can only intercept exceptions, and you have attempted to catch something that is not derived from an exception.</span></span>  
   
- <span data-ttu-id="9c9b5-104">**エラー ID:** BC30392</span><span class="sxs-lookup"><span data-stu-id="9c9b5-104">**Error ID:** BC30392</span></span>  
+ <span data-ttu-id="ba7e9-104">**エラー ID:** BC30392</span><span class="sxs-lookup"><span data-stu-id="ba7e9-104">**Error ID:** BC30392</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="9c9b5-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="9c9b5-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ba7e9-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="ba7e9-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="9c9b5-106">`Catch` ステートメントを削除するか、または `Catch` の対象を実際の例外に変更します。</span><span class="sxs-lookup"><span data-stu-id="9c9b5-106">Remove the `Catch` statement, or change the target of the `Catch` to an actual exception.</span></span>  
+1.  <span data-ttu-id="ba7e9-106">`Catch` ステートメントを削除するか、または `Catch` の対象を実際の例外に変更します。</span><span class="sxs-lookup"><span data-stu-id="ba7e9-106">Remove the `Catch` statement, or change the target of the `Catch` to an actual exception.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="9c9b5-107">参照</span><span class="sxs-lookup"><span data-stu-id="9c9b5-107">See Also</span></span>  
- [<span data-ttu-id="9c9b5-108">Try...Catch...Finally ステートメント</span><span class="sxs-lookup"><span data-stu-id="9c9b5-108">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)  
+## <a name="see-also"></a><span data-ttu-id="ba7e9-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="ba7e9-107">See Also</span></span>  
+ [<span data-ttu-id="ba7e9-108">Try...Catch...Finally ステートメント</span><span class="sxs-lookup"><span data-stu-id="ba7e9-108">Try...Catch...Finally Statement</span></span>](../../visual-basic/language-reference/statements/try-catch-finally-statement.md)  
  
