--- a/docs/visual-basic/misc/bc30414.md
+++ b/docs/visual-basic/misc/bc30414.md
@@ -1,33 +1,27 @@
 ---
-title: '型 &#39; の値&lt;type1&gt;&#39; に変換できません (& m); #39&lt;type2&gt;&#39;配列型の次元数が異なるためです。'
+title: 型の値&#39; &lt;type1&gt; &#39;に変換できない&#39; &lt;type2&gt; &#39;配列型の次元数が異なるため
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30414
 - bc30414
 helpviewer_keywords:
 - BC30414
 ms.assetid: 0b103956-ce19-4bf8-9ec5-ef4f5c090a56
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: db670bdbd981356d06ed82de61236173ccdba19c
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: ef8297caf15b6736dfbde2531c70c769443d78fb
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611128"
 ---
-# <a name="value-of-type-39lttype1gt39-cannot-be-converted-to-39lttype2gt39-because-the-array-types-have-different-numbers-of-dimensions"></a><span data-ttu-id="8c182-102">型 &#39; の値&lt;type1&gt;&#39; に変換できません (& m); #39&lt;type2&gt;&#39;配列型の次元数が異なるためです。</span><span class="sxs-lookup"><span data-stu-id="8c182-102">Value of type &#39;&lt;type1&gt;&#39; cannot be converted to &#39;&lt;type2&gt;&#39; because the array types have different numbers of dimensions</span></span>
-<span data-ttu-id="8c182-103">1 つの配列をディメンションの数が異なる別の配列に変換しようとしました。</span><span class="sxs-lookup"><span data-stu-id="8c182-103">You have tried to convert one array to another with a different number of dimensions.</span></span>  
+# <a name="value-of-type-39lttype1gt39-cannot-be-converted-to-39lttype2gt39-because-the-array-types-have-different-numbers-of-dimensions"></a><span data-ttu-id="e83ff-102">型の値&#39; &lt;type1&gt; &#39;に変換できない&#39; &lt;type2&gt; &#39;配列型の次元数が異なるため</span><span class="sxs-lookup"><span data-stu-id="e83ff-102">Value of type &#39;&lt;type1&gt;&#39; cannot be converted to &#39;&lt;type2&gt;&#39; because the array types have different numbers of dimensions</span></span>
+<span data-ttu-id="e83ff-103">1 つの配列をディメンションの数が異なる別の配列に変換しようとしました。</span><span class="sxs-lookup"><span data-stu-id="e83ff-103">You have tried to convert one array to another with a different number of dimensions.</span></span>  
   
- <span data-ttu-id="8c182-104">**エラー ID:** BC30414</span><span class="sxs-lookup"><span data-stu-id="8c182-104">**Error ID:** BC30414</span></span>  
+ <span data-ttu-id="e83ff-104">**エラー ID:** BC30414</span><span class="sxs-lookup"><span data-stu-id="e83ff-104">**Error ID:** BC30414</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="8c182-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="8c182-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e83ff-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="e83ff-105">To correct this error</span></span>  
   
--   <span data-ttu-id="8c182-106">ディメンションの数が一致するように、片方または両方の配列を変更します。</span><span class="sxs-lookup"><span data-stu-id="8c182-106">Change one or both arrays so that the number of dimensions matches.</span></span>  
+-   <span data-ttu-id="e83ff-106">ディメンションの数が一致するように、片方または両方の配列を変更します。</span><span class="sxs-lookup"><span data-stu-id="e83ff-106">Change one or both arrays so that the number of dimensions matches.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="8c182-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="8c182-107">See Also</span></span>  
- [<span data-ttu-id="8c182-108">配列</span><span class="sxs-lookup"><span data-stu-id="8c182-108">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+## <a name="see-also"></a><span data-ttu-id="e83ff-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="e83ff-107">See Also</span></span>  
+ [<span data-ttu-id="e83ff-108">配列</span><span class="sxs-lookup"><span data-stu-id="e83ff-108">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
