--- a/docs/visual-basic/misc/bc30563.md
+++ b/docs/visual-basic/misc/bc30563.md
@@ -1,33 +1,27 @@
 ---
 title: '&#39;&lt;名前&gt;&#39;でアプリケーションのオブジェクトがあいまいです&#39;&lt;一覧&gt;&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30563
 - vbc30563
 helpviewer_keywords:
 - BC30563
 ms.assetid: 965c1570-6297-47b5-b41e-e2dd68b034f0
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: d4fa7ad882dbeddf714af3e6e68dc00804eac74a
-ms.sourcegitcommit: 86adcc06e35390f13c1e372c36d2e044f1fc31ef
+ms.openlocfilehash: 65e0e716762e8d138808d6505d3de770a663665a
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 04/26/2018
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33613616"
 ---
-# <a name="39ltnamegt39-is-ambiguous-in-the-application-objects-39ltlistgt39"></a><span data-ttu-id="c6182-102">&#39;&lt;名前&gt;&#39;でアプリケーションのオブジェクトがあいまいです&#39;&lt;一覧&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="c6182-102">&#39;&lt;name&gt;&#39; is ambiguous in the application objects &#39;&lt;list&gt;&#39;</span></span>
-<span data-ttu-id="c6182-103">あいまいな名前を指定したため、別の名前と競合しています。</span><span class="sxs-lookup"><span data-stu-id="c6182-103">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="c6182-104">Visual Basic コンパイラが、競合解決規則です。名は、自分で明確する必要があります。</span><span class="sxs-lookup"><span data-stu-id="c6182-104">The Visual Basic compiler does not have any conflict resolution rules; you must disambiguate names yourself.</span></span> <span data-ttu-id="c6182-105">エラー メッセージに示されるリストには、名前があいまいなアプリケーション オブジェクトに関する詳細が記載されています。</span><span class="sxs-lookup"><span data-stu-id="c6182-105">The list provided in the error message details the application objects where the name is ambiguous.</span></span>  
+# <a name="39ltnamegt39-is-ambiguous-in-the-application-objects-39ltlistgt39"></a><span data-ttu-id="66ab4-102">&#39;&lt;名前&gt;&#39;でアプリケーションのオブジェクトがあいまいです&#39;&lt;一覧&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="66ab4-102">&#39;&lt;name&gt;&#39; is ambiguous in the application objects &#39;&lt;list&gt;&#39;</span></span>
+<span data-ttu-id="66ab4-103">あいまいな名前を指定したため、別の名前と競合しています。</span><span class="sxs-lookup"><span data-stu-id="66ab4-103">You have provided a name that is ambiguous and therefore conflicts with another name.</span></span> <span data-ttu-id="66ab4-104">Visual Basic コンパイラが、競合解決規則です。名は、自分で明確する必要があります。</span><span class="sxs-lookup"><span data-stu-id="66ab4-104">The Visual Basic compiler does not have any conflict resolution rules; you must disambiguate names yourself.</span></span> <span data-ttu-id="66ab4-105">エラー メッセージに示されるリストには、名前があいまいなアプリケーション オブジェクトに関する詳細が記載されています。</span><span class="sxs-lookup"><span data-stu-id="66ab4-105">The list provided in the error message details the application objects where the name is ambiguous.</span></span>  
   
- <span data-ttu-id="c6182-106">**エラー ID:** BC30563</span><span class="sxs-lookup"><span data-stu-id="c6182-106">**Error ID:** BC30563</span></span>  
+ <span data-ttu-id="66ab4-106">**エラー ID:** BC30563</span><span class="sxs-lookup"><span data-stu-id="66ab4-106">**Error ID:** BC30563</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c6182-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="c6182-107">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="66ab4-107">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="66ab4-107">To correct this error</span></span>  
   
--   <span data-ttu-id="c6182-108">名前を完全修飾します。</span><span class="sxs-lookup"><span data-stu-id="c6182-108">Fully qualify the name.</span></span>  
+-   <span data-ttu-id="66ab4-108">名前を完全修飾します。</span><span class="sxs-lookup"><span data-stu-id="66ab4-108">Fully qualify the name.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="c6182-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="c6182-109">See Also</span></span>  
- [<span data-ttu-id="c6182-110">Namespace ステートメント</span><span class="sxs-lookup"><span data-stu-id="c6182-110">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
+## <a name="see-also"></a><span data-ttu-id="66ab4-109">関連項目</span><span class="sxs-lookup"><span data-stu-id="66ab4-109">See Also</span></span>  
+ [<span data-ttu-id="66ab4-110">Namespace ステートメント</span><span class="sxs-lookup"><span data-stu-id="66ab4-110">Namespace Statement</span></span>](../../visual-basic/language-reference/statements/namespace-statement.md)
