--- a/docs/visual-basic/misc/bc30624.md
+++ b/docs/visual-basic/misc/bc30624.md
@@ -1,34 +1,28 @@
 ---
-title: '&#39;です。構造体 &#39;ステートメントの終わりに対応する &#39; にする必要があります。End Structure &#39;'
+title: '&#39;構造体&#39;、対応するステートメントが終了する必要があります&#39;End 構造体&#39;'
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30624
 - vbc30624
 helpviewer_keywords:
 - BC30624
 ms.assetid: ee35bace-6914-4139-a581-7599cd6828cb
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 954e08bde61a8c46a8b8f7602506b807c342138c
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 29b54817d7dae4f6ffcccf4870a32e00dd83c2a3
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611115"
 ---
-# <a name="39structure39-statement-must-end-with-a-matching-39end-structure39"></a><span data-ttu-id="bea3f-102">&#39;です。構造体 &#39;ステートメントの終わりに対応する &#39; にする必要があります。End Structure &#39;</span><span class="sxs-lookup"><span data-stu-id="bea3f-102">&#39;Structure&#39; statement must end with a matching &#39;End Structure&#39;</span></span>
-<span data-ttu-id="bea3f-103">構造体は `Structure` ステートメントで始まり、 `End Structure` コンストラクトで終わります。</span><span class="sxs-lookup"><span data-stu-id="bea3f-103">Structures begin with a `Structure` statement and end with an `End Structure` construct.</span></span>  
+# <a name="39structure39-statement-must-end-with-a-matching-39end-structure39"></a><span data-ttu-id="367a8-102">&#39;構造体&#39;、対応するステートメントが終了する必要があります&#39;End 構造体&#39;</span><span class="sxs-lookup"><span data-stu-id="367a8-102">&#39;Structure&#39; statement must end with a matching &#39;End Structure&#39;</span></span>
+<span data-ttu-id="367a8-103">構造体は `Structure` ステートメントで始まり、 `End Structure` コンストラクトで終わります。</span><span class="sxs-lookup"><span data-stu-id="367a8-103">Structures begin with a `Structure` statement and end with an `End Structure` construct.</span></span>  
   
- <span data-ttu-id="bea3f-104">**エラー ID:** BC30624</span><span class="sxs-lookup"><span data-stu-id="bea3f-104">**Error ID:** BC30624</span></span>  
+ <span data-ttu-id="367a8-104">**エラー ID:** BC30624</span><span class="sxs-lookup"><span data-stu-id="367a8-104">**Error ID:** BC30624</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="bea3f-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="bea3f-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="367a8-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="367a8-105">To correct this error</span></span>  
   
--   <span data-ttu-id="bea3f-106">構造体ブロックの最後に `End Structure` ステートメントがあることを確認します。</span><span class="sxs-lookup"><span data-stu-id="bea3f-106">Make sure that the structure block ends with an `End Structure` statement.</span></span>  
+-   <span data-ttu-id="367a8-106">構造体ブロックの最後に `End Structure` ステートメントがあることを確認します。</span><span class="sxs-lookup"><span data-stu-id="367a8-106">Make sure that the structure block ends with an `End Structure` statement.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="bea3f-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="bea3f-107">See Also</span></span>  
- [<span data-ttu-id="bea3f-108">構造体</span><span class="sxs-lookup"><span data-stu-id="bea3f-108">Structures</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures.md)  
- [<span data-ttu-id="bea3f-109">構造体とクラス</span><span class="sxs-lookup"><span data-stu-id="bea3f-109">Structures and Classes</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures-and-classes.md)
+## <a name="see-also"></a><span data-ttu-id="367a8-107">関連項目</span><span class="sxs-lookup"><span data-stu-id="367a8-107">See Also</span></span>  
+ [<span data-ttu-id="367a8-108">構造体</span><span class="sxs-lookup"><span data-stu-id="367a8-108">Structures</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures.md)  
+ [<span data-ttu-id="367a8-109">構造体とクラス</span><span class="sxs-lookup"><span data-stu-id="367a8-109">Structures and Classes</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures-and-classes.md)
