--- a/docs/visual-basic/misc/bc30628.md
+++ b/docs/visual-basic/misc/bc30628.md
@@ -1,36 +1,30 @@
 ---
-title: '構造体を持つことはできません (& a) #39; Inherits &#39;ステートメント'
+title: 構造体を持てません&#39;Inherits&#39;ステートメント
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - vbc30628
 - bc30628
 helpviewer_keywords:
 - BC30628
 ms.assetid: 131ecce1-6378-43fb-af0b-cdf5a0350cec
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 6f9c12659b0b944229bf91b5b85a129bf707489f
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 5c1fba7902f77f533b4eed0fc189340aab62b2d1
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33610296"
 ---
-# <a name="structures-cannot-have-39inherits39-statements"></a><span data-ttu-id="90f8d-102">構造体を持つことはできません (& a) #39; Inherits &#39;ステートメント</span><span class="sxs-lookup"><span data-stu-id="90f8d-102">Structures cannot have &#39;Inherits&#39; statements</span></span>
-<span data-ttu-id="90f8d-103">クラスとは異なり、構造体は継承をサポートしていません。</span><span class="sxs-lookup"><span data-stu-id="90f8d-103">Unlike classes, structures do not support inheritance.</span></span>  
+# <a name="structures-cannot-have-39inherits39-statements"></a><span data-ttu-id="0bc08-102">構造体を持てません&#39;Inherits&#39;ステートメント</span><span class="sxs-lookup"><span data-stu-id="0bc08-102">Structures cannot have &#39;Inherits&#39; statements</span></span>
+<span data-ttu-id="0bc08-103">クラスとは異なり、構造体は継承をサポートしていません。</span><span class="sxs-lookup"><span data-stu-id="0bc08-103">Unlike classes, structures do not support inheritance.</span></span>  
   
- <span data-ttu-id="90f8d-104">**エラー ID:** BC30628</span><span class="sxs-lookup"><span data-stu-id="90f8d-104">**Error ID:** BC30628</span></span>  
+ <span data-ttu-id="0bc08-104">**エラー ID:** BC30628</span><span class="sxs-lookup"><span data-stu-id="0bc08-104">**Error ID:** BC30628</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="90f8d-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="90f8d-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="0bc08-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="0bc08-105">To correct this error</span></span>  
   
--   <span data-ttu-id="90f8d-106">構造体から `Inherits` ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="90f8d-106">Remove the `Inherits` statement from the structure.</span></span>  
+-   <span data-ttu-id="0bc08-106">構造体から `Inherits` ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="0bc08-106">Remove the `Inherits` statement from the structure.</span></span>  
   
--   <span data-ttu-id="90f8d-107">代わりに、クラスを使用するようにアプリケーションを再設計します。</span><span class="sxs-lookup"><span data-stu-id="90f8d-107">Redesign your application to use classes instead.</span></span>  
+-   <span data-ttu-id="0bc08-107">代わりに、クラスを使用するようにアプリケーションを再設計します。</span><span class="sxs-lookup"><span data-stu-id="0bc08-107">Redesign your application to use classes instead.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="90f8d-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="90f8d-108">See Also</span></span>  
- [<span data-ttu-id="90f8d-109">構造体</span><span class="sxs-lookup"><span data-stu-id="90f8d-109">Structures</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures.md)  
- [<span data-ttu-id="90f8d-110">構造体とクラス</span><span class="sxs-lookup"><span data-stu-id="90f8d-110">Structures and Classes</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures-and-classes.md)
+## <a name="see-also"></a><span data-ttu-id="0bc08-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="0bc08-108">See Also</span></span>  
+ [<span data-ttu-id="0bc08-109">構造体</span><span class="sxs-lookup"><span data-stu-id="0bc08-109">Structures</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures.md)  
+ [<span data-ttu-id="0bc08-110">構造体とクラス</span><span class="sxs-lookup"><span data-stu-id="0bc08-110">Structures and Classes</span></span>](../../visual-basic/programming-guide/language-features/data-types/structures-and-classes.md)
