--- a/docs/visual-basic/misc/bc30640.md
+++ b/docs/visual-basic/misc/bc30640.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618473"
 ---
 # <a name="39option-explicit39-can-be-followed-only-by-39on39-or-39off39"></a><span data-ttu-id="1b116-102">&#39;オプションの Explicit&#39;が続きますのみ&#39;で&#39;または&#39;オフ&#39;</span><span class="sxs-lookup"><span data-stu-id="1b116-102">&#39;Option Explicit&#39; can be followed only by &#39;On&#39; or &#39;Off&#39;</span></span>
 <span data-ttu-id="1b116-103">`Option Explicit` ステートメントは `On` または `Off`のどちらかを指定する必要があります。</span><span class="sxs-lookup"><span data-stu-id="1b116-103">`Option Explicit` statements must specify either `On` or `Off`.</span></span> <span data-ttu-id="1b116-104">その他のすべての値は無効です。</span><span class="sxs-lookup"><span data-stu-id="1b116-104">All other values are invalid.</span></span>  
