--- a/docs/visual-basic/misc/bc30671.md
+++ b/docs/visual-basic/misc/bc30671.md
@@ -1,35 +1,29 @@
 ---
 title: 単一の型指定子で宣言された複数の変数で、明示的な初期化を行うことはできません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30671
 - vbc30671
 helpviewer_keywords:
 - BC30671
 ms.assetid: 57bbdd58-b58d-4144-8fa6-366a7167df27
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 8cdc98d25f816f573cabccadb83b1dceae47bab0
-ms.sourcegitcommit: 4f3fef493080a43e70e951223894768d36ce430a
+ms.openlocfilehash: 8f769c067dd69eb1890adf7d4354edb872d2d66c
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 11/21/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614352"
 ---
-# <a name="explicit-initialization-is-not-permitted-with-multiple-variables-declared-with-a-single-type-specifier"></a><span data-ttu-id="2b91e-102">単一の型指定子で宣言された複数の変数で、明示的な初期化を行うことはできません</span><span class="sxs-lookup"><span data-stu-id="2b91e-102">Explicit initialization is not permitted with multiple variables declared with a single type specifier</span></span>
-<span data-ttu-id="2b91e-103">複数の変数が同一行で宣言された場合は、初期化できません。</span><span class="sxs-lookup"><span data-stu-id="2b91e-103">Initialization is not allowed when multiple variables are declared on the same line.</span></span>  
+# <a name="explicit-initialization-is-not-permitted-with-multiple-variables-declared-with-a-single-type-specifier"></a><span data-ttu-id="5cb59-102">単一の型指定子で宣言された複数の変数で、明示的な初期化を行うことはできません</span><span class="sxs-lookup"><span data-stu-id="5cb59-102">Explicit initialization is not permitted with multiple variables declared with a single type specifier</span></span>
+<span data-ttu-id="5cb59-103">複数の変数が同一行で宣言された場合は、初期化できません。</span><span class="sxs-lookup"><span data-stu-id="5cb59-103">Initialization is not allowed when multiple variables are declared on the same line.</span></span>  
   
- <span data-ttu-id="2b91e-104">**エラー ID:** BC30671</span><span class="sxs-lookup"><span data-stu-id="2b91e-104">**Error ID:** BC30671</span></span>  
+ <span data-ttu-id="5cb59-104">**エラー ID:** BC30671</span><span class="sxs-lookup"><span data-stu-id="5cb59-104">**Error ID:** BC30671</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2b91e-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="2b91e-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="5cb59-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="5cb59-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="2b91e-106">各項目を別個に宣言および初期化します。</span><span class="sxs-lookup"><span data-stu-id="2b91e-106">Declare and initialize each item separately.</span></span>  
+1.  <span data-ttu-id="5cb59-106">各項目を別個に宣言および初期化します。</span><span class="sxs-lookup"><span data-stu-id="5cb59-106">Declare and initialize each item separately.</span></span>  
   
-2.  <span data-ttu-id="2b91e-107">複数の項目を一緒に宣言し、次に各項目を初期化します。次に例を示します。</span><span class="sxs-lookup"><span data-stu-id="2b91e-107">Declare multiple items together and then initialize each item; for example:</span></span>  
+2.  <span data-ttu-id="5cb59-107">複数の項目を一緒に宣言し、次に各項目を初期化します。次に例を示します。</span><span class="sxs-lookup"><span data-stu-id="5cb59-107">Declare multiple items together and then initialize each item; for example:</span></span>  
   
     ```  
     Dim x, b, i As Integer  
@@ -37,6 +31,6 @@ ms.lasthandoff: 11/21/2017
     ' ":" is the same as a new line.  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="2b91e-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="2b91e-108">See Also</span></span>  
- [<span data-ttu-id="2b91e-109">Dim ステートメント</span><span class="sxs-lookup"><span data-stu-id="2b91e-109">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)  
- [<span data-ttu-id="2b91e-110">変数宣言</span><span class="sxs-lookup"><span data-stu-id="2b91e-110">Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
+## <a name="see-also"></a><span data-ttu-id="5cb59-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="5cb59-108">See Also</span></span>  
+ [<span data-ttu-id="5cb59-109">Dim ステートメント</span><span class="sxs-lookup"><span data-stu-id="5cb59-109">Dim Statement</span></span>](../../visual-basic/language-reference/statements/dim-statement.md)  
+ [<span data-ttu-id="5cb59-110">変数宣言</span><span class="sxs-lookup"><span data-stu-id="5cb59-110">Variable Declaration</span></span>](../../visual-basic/programming-guide/language-features/variables/variable-declaration.md)
