--- a/docs/visual-basic/misc/bc30672.md
+++ b/docs/visual-basic/misc/bc30672.md
@@ -1,40 +1,34 @@
 ---
 title: 明示的な初期化は、明示的な境界で宣言された配列に対しては許可されていません
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30672
 - vbc30672
 helpviewer_keywords:
 - BC30672
 ms.assetid: 4b525e8d-bde5-4408-8c10-7605ca039f0e
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 023edb34fe737c855831b7cdb7de0c8db0f9e7f4
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: 56f3b632e998a29e3061f2cb8e739079b57f59b6
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614525"
 ---
-# <a name="explicit-initialization-is-not-permitted-for-arrays-declared-with-explicit-bounds"></a><span data-ttu-id="c0368-102">明示的な初期化は、明示的な境界で宣言された配列に対しては許可されていません</span><span class="sxs-lookup"><span data-stu-id="c0368-102">Explicit initialization is not permitted for arrays declared with explicit bounds</span></span>
-<span data-ttu-id="c0368-103">配列は、特定のサイズになるように宣言している場合には初期化できません。</span><span class="sxs-lookup"><span data-stu-id="c0368-103">Arrays cannot be initialized if they are declared to be a specific size.</span></span>  
+# <a name="explicit-initialization-is-not-permitted-for-arrays-declared-with-explicit-bounds"></a><span data-ttu-id="e690b-102">明示的な初期化は、明示的な境界で宣言された配列に対しては許可されていません</span><span class="sxs-lookup"><span data-stu-id="e690b-102">Explicit initialization is not permitted for arrays declared with explicit bounds</span></span>
+<span data-ttu-id="e690b-103">配列は、特定のサイズになるように宣言している場合には初期化できません。</span><span class="sxs-lookup"><span data-stu-id="e690b-103">Arrays cannot be initialized if they are declared to be a specific size.</span></span>  
   
- <span data-ttu-id="c0368-104">**エラー ID:** BC30672</span><span class="sxs-lookup"><span data-stu-id="c0368-104">**Error ID:** BC30672</span></span>  
+ <span data-ttu-id="e690b-104">**エラー ID:** BC30672</span><span class="sxs-lookup"><span data-stu-id="e690b-104">**Error ID:** BC30672</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="c0368-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="c0368-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="e690b-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="e690b-105">To correct this error</span></span>  
   
--   <span data-ttu-id="c0368-106">配列を宣言し、個別に初期化します。</span><span class="sxs-lookup"><span data-stu-id="c0368-106">Declare the array, and then initialize it separately.</span></span>  
+-   <span data-ttu-id="e690b-106">配列を宣言し、個別に初期化します。</span><span class="sxs-lookup"><span data-stu-id="e690b-106">Declare the array, and then initialize it separately.</span></span>  
   
--   <span data-ttu-id="c0368-107">たとえば、動的配列として宣言および初期化し、必要に応じて `ReDim` を使用します。</span><span class="sxs-lookup"><span data-stu-id="c0368-107">Declare and initialize as a dynamic array, and use `ReDim` if necessary; for example:</span></span>  
+-   <span data-ttu-id="e690b-107">たとえば、動的配列として宣言および初期化し、必要に応じて `ReDim` を使用します。</span><span class="sxs-lookup"><span data-stu-id="e690b-107">Declare and initialize as a dynamic array, and use `ReDim` if necessary; for example:</span></span>  
   
     ```  
     Dim A() As Integer = {0, 1, 2, 3}  
     ReDim Preserve A(3)  
     ```  
   
-## <a name="see-also"></a><span data-ttu-id="c0368-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="c0368-108">See Also</span></span>  
- [<span data-ttu-id="c0368-109">配列</span><span class="sxs-lookup"><span data-stu-id="c0368-109">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+## <a name="see-also"></a><span data-ttu-id="e690b-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="e690b-108">See Also</span></span>  
+ [<span data-ttu-id="e690b-109">配列</span><span class="sxs-lookup"><span data-stu-id="e690b-109">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
