--- a/docs/visual-basic/misc/bc30688.md
+++ b/docs/visual-basic/misc/bc30688.md
@@ -1,35 +1,29 @@
 ---
-title: 'インターフェイスのイベントを宣言することはできません (& a) #39 です。&lt;実装&gt;&#39;です。'
+title: インターフェイスのイベントを宣言することはできません&#39;&lt;を実装します。&gt;&#39;
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30688
 - vbc30688
 helpviewer_keywords:
 - BC30688
 ms.assetid: 577823c1-815c-4f1c-9177-4bbf73fa92db
-caps.latest.revision: 8
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: b8dfe931e914f05b7ceed9b93bb77dfc1a0a8977
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: c909007db18d9d4cbd7a4e176b432612ae076ebf
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33610309"
 ---
-# <a name="events-in-interfaces-cannot-be-declared-39ltimplementsgt39"></a><span data-ttu-id="43f5b-102">インターフェイスのイベントを宣言することはできません (& a) #39 です。&lt;実装&gt;&#39;です。</span><span class="sxs-lookup"><span data-stu-id="43f5b-102">Events in interfaces cannot be declared &#39;&lt;implements&gt;&#39;</span></span>
-<span data-ttu-id="43f5b-103">インターフェイス内で宣言されたイベントは、その他のインターフェイスのイベントを実装できません。</span><span class="sxs-lookup"><span data-stu-id="43f5b-103">Events declared in interfaces cannot implement the events of other interfaces.</span></span>  
+# <a name="events-in-interfaces-cannot-be-declared-39ltimplementsgt39"></a><span data-ttu-id="a7973-102">インターフェイスのイベントを宣言することはできません&#39;&lt;を実装します。&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="a7973-102">Events in interfaces cannot be declared &#39;&lt;implements&gt;&#39;</span></span>
+<span data-ttu-id="a7973-103">インターフェイス内で宣言されたイベントは、その他のインターフェイスのイベントを実装できません。</span><span class="sxs-lookup"><span data-stu-id="a7973-103">Events declared in interfaces cannot implement the events of other interfaces.</span></span>  
   
- <span data-ttu-id="43f5b-104">**エラー ID:** BC30688</span><span class="sxs-lookup"><span data-stu-id="43f5b-104">**Error ID:** BC30688</span></span>  
+ <span data-ttu-id="a7973-104">**エラー ID:** BC30688</span><span class="sxs-lookup"><span data-stu-id="a7973-104">**Error ID:** BC30688</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="43f5b-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="43f5b-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="a7973-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="a7973-105">To correct this error</span></span>  
   
-1.  <span data-ttu-id="43f5b-106">`Implements` ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="43f5b-106">Remove the `Implements` statement.</span></span>  
+1.  <span data-ttu-id="a7973-106">`Implements` ステートメントを削除します。</span><span class="sxs-lookup"><span data-stu-id="a7973-106">Remove the `Implements` statement.</span></span>  
   
-2.  <span data-ttu-id="43f5b-107">クラスまたは構造体の中でイベントを実装します。</span><span class="sxs-lookup"><span data-stu-id="43f5b-107">Implement the event within a class or structure.</span></span>  
+2.  <span data-ttu-id="a7973-107">クラスまたは構造体の中でイベントを実装します。</span><span class="sxs-lookup"><span data-stu-id="a7973-107">Implement the event within a class or structure.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="43f5b-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="43f5b-108">See Also</span></span>  
- [<span data-ttu-id="43f5b-109">Interface ステートメント</span><span class="sxs-lookup"><span data-stu-id="43f5b-109">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
+## <a name="see-also"></a><span data-ttu-id="a7973-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="a7973-108">See Also</span></span>  
+ [<span data-ttu-id="a7973-109">Interface ステートメント</span><span class="sxs-lookup"><span data-stu-id="a7973-109">Interface Statement</span></span>](../../visual-basic/language-reference/statements/interface-statement.md)
