--- a/docs/visual-basic/misc/bc30702.md
+++ b/docs/visual-basic/misc/bc30702.md
@@ -1,35 +1,29 @@
 ---
-title: インデックス &#39;&lt;indexnumber&gt;&#39; ディメンション &#39;&lt;dimensionnumber&gt;&#39; が範囲外です
+title: インデックス&#39; &lt;indexnumber&gt; &#39;ディメンションの&#39; &lt;dimensionnumber&gt; &#39;が範囲外です
 ms.date: 07/20/2015
-ms.prod: .net
-ms.technology:
-- devlang-visual-basic
-ms.topic: article
 f1_keywords:
 - bc30702
 - vbc30702
 helpviewer_keywords:
 - BC30702
 ms.assetid: c81a2d76-7065-437e-8fc8-84e8ad01c7c6
-caps.latest.revision: 9
-author: dotnet-bot
-ms.author: dotnetcontent
-ms.openlocfilehash: 55d4fe3d6cc6185849823278ee42247adcc8140e
-ms.sourcegitcommit: bd1ef61f4bb794b25383d3d72e71041a5ced172e
+ms.openlocfilehash: d08f6337ba69586a7ff83ed0409942e4d8551445
+ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
-ms.lasthandoff: 10/18/2017
+ms.lasthandoff: 05/04/2018
+ms.locfileid: "33611164"
 ---
-# <a name="index-39ltindexnumbergt39-for-dimension-39ltdimensionnumbergt39-is-out-of-range"></a><span data-ttu-id="2c105-102">インデックス &#39;&lt;indexnumber&gt;&#39; ディメンション &#39;&lt;dimensionnumber&gt;&#39; が範囲外です</span><span class="sxs-lookup"><span data-stu-id="2c105-102">Index &#39;&lt;indexnumber&gt;&#39; for dimension &#39;&lt;dimensionnumber&gt;&#39; is out of range</span></span>
-<span data-ttu-id="2c105-103">定義されている範囲を超えているインデックスがあります。</span><span class="sxs-lookup"><span data-stu-id="2c105-103">One of the indexes exceeds the range defined.</span></span>  
+# <a name="index-39ltindexnumbergt39-for-dimension-39ltdimensionnumbergt39-is-out-of-range"></a><span data-ttu-id="ca62c-102">インデックス&#39; &lt;indexnumber&gt; &#39;ディメンションの&#39; &lt;dimensionnumber&gt; &#39;が範囲外です</span><span class="sxs-lookup"><span data-stu-id="ca62c-102">Index &#39;&lt;indexnumber&gt;&#39; for dimension &#39;&lt;dimensionnumber&gt;&#39; is out of range</span></span>
+<span data-ttu-id="ca62c-103">定義されている範囲を超えているインデックスがあります。</span><span class="sxs-lookup"><span data-stu-id="ca62c-103">One of the indexes exceeds the range defined.</span></span>  
   
- <span data-ttu-id="2c105-104">**エラー ID:** BC30702</span><span class="sxs-lookup"><span data-stu-id="2c105-104">**Error ID:** BC30702</span></span>  
+ <span data-ttu-id="ca62c-104">**エラー ID:** BC30702</span><span class="sxs-lookup"><span data-stu-id="ca62c-104">**Error ID:** BC30702</span></span>  
   
-## <a name="to-correct-this-error"></a><span data-ttu-id="2c105-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="2c105-105">To correct this error</span></span>  
+## <a name="to-correct-this-error"></a><span data-ttu-id="ca62c-105">このエラーを解決するには</span><span class="sxs-lookup"><span data-stu-id="ca62c-105">To correct this error</span></span>  
   
--   <span data-ttu-id="2c105-106">配列の境界を越えないようにプロシージャのロジックを変更します。</span><span class="sxs-lookup"><span data-stu-id="2c105-106">Change the logic of the procedure so that the array bounds are not exceeded.</span></span>  
+-   <span data-ttu-id="ca62c-106">配列の境界を越えないようにプロシージャのロジックを変更します。</span><span class="sxs-lookup"><span data-stu-id="ca62c-106">Change the logic of the procedure so that the array bounds are not exceeded.</span></span>  
   
--   <span data-ttu-id="2c105-107">配列を再定義して値の範囲を広げます。</span><span class="sxs-lookup"><span data-stu-id="2c105-107">Redefine the array to allow a wider range of values.</span></span>  
+-   <span data-ttu-id="ca62c-107">配列を再定義して値の範囲を広げます。</span><span class="sxs-lookup"><span data-stu-id="ca62c-107">Redefine the array to allow a wider range of values.</span></span>  
   
-## <a name="see-also"></a><span data-ttu-id="2c105-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="2c105-108">See Also</span></span>  
- [<span data-ttu-id="2c105-109">配列</span><span class="sxs-lookup"><span data-stu-id="2c105-109">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
+## <a name="see-also"></a><span data-ttu-id="ca62c-108">関連項目</span><span class="sxs-lookup"><span data-stu-id="ca62c-108">See Also</span></span>  
+ [<span data-ttu-id="ca62c-109">配列</span><span class="sxs-lookup"><span data-stu-id="ca62c-109">Arrays</span></span>](../../visual-basic/programming-guide/language-features/arrays/index.md)
