--- a/docs/visual-basic/misc/bc31069.md
+++ b/docs/visual-basic/misc/bc31069.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33622504"
 ---
 # <a name="enum-in-an-interface-cannot-be-declared-39ltspecifiergt39"></a><span data-ttu-id="a7a1f-102">インターフェイス内の Enum を宣言できません&#39;&lt;指定子。&gt;&#39;</span><span class="sxs-lookup"><span data-stu-id="a7a1f-102">Enum in an interface cannot be declared &#39;&lt;specifier&gt;&#39;</span></span>
 <span data-ttu-id="a7a1f-103">インターフェイスで宣言された列挙体で、無効な修飾子が指定されました。</span><span class="sxs-lookup"><span data-stu-id="a7a1f-103">An invalid modifier was specified with an enumeration declared in an interface.</span></span>  
