--- a/docs/visual-basic/misc/bc31107.md
+++ b/docs/visual-basic/misc/bc31107.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33622068"
 ---
 # <a name="property-accessors-cannot-be-declared-39ltaccessmodifiergt39-in-a-39default39-property"></a><span data-ttu-id="155f1-102">プロパティ アクセサーを宣言することはできません&#39; &lt;accessmodifier&gt; &#39;で、&#39;既定&#39;プロパティ</span><span class="sxs-lookup"><span data-stu-id="155f1-102">Property accessors cannot be declared &#39;&lt;accessmodifier&gt;&#39; in a &#39;Default&#39; property</span></span>
 <span data-ttu-id="155f1-103">A [Get ステートメント](../../visual-basic/language-reference/statements/get-statement.md)または[Set ステートメント](../../visual-basic/language-reference/statements/set-statement.md)既定にはプロパティが含まれています、`Private`キーワード。</span><span class="sxs-lookup"><span data-stu-id="155f1-103">A [Get Statement](../../visual-basic/language-reference/statements/get-statement.md) or [Set Statement](../../visual-basic/language-reference/statements/set-statement.md) in a default property includes the `Private` keyword.</span></span>  
