commit translated contents

--- a/docs/visual-basic/misc/bc30092.md
+++ b/docs/visual-basic/misc/bc30092.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33617456"
 ---
 # <a name="39next39-must-be-preceded-by-a-matching-39for39"></a>&#39;[次へ]&#39;前に、対応する必要がある&#39;の&#39;
 `Next` ステートメントが発生していますが、対応する `For` または `For Each` ステートメントがありません。 `Next` の前に、対応する `For` または `For Each` ステートメントを指定してください。  
