--- a/docs/visual-basic/misc/bc30610.md
+++ b/docs/visual-basic/misc/bc30610.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33614339"
 ---
 # <a name="class-39ltclassnamegt39-must-either-be-declared-39mustinherit39-or-override-the-following-inherited-39mustoverride39-members-ltmembernamesgt"></a>クラス&#39; &lt;classname&gt; &#39;いずれかとして宣言されなければなりません&#39;MustInherit&#39; 、次の継承をオーバーライドまたは&#39;MustOverride&#39;メンバー: &lt;membername (s)&gt;
 `MustOverride` メンバーを含む基底クラスから派生したクラスでは、このようなメンバーをオーバーライドするか、または `MustInherit` 修飾子を使用する必要があります。  
