--- a/docs/visual-basic/misc/bc30637.md
+++ b/docs/visual-basic/misc/bc30637.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33616553"
 ---
 # <a name="assembly-or-module-attribute-statements-must-precede-any-declarations-in-a-file"></a>Assembly または Module 属性ステートメントは、ファイル内では宣言の前に記述しなければなりません
 グローバル属性は、ソース ファイルの先頭で `Option` ステートメントと `Imports` ステートメントよりも後、かつその他のステートメントよりも前に宣言する必要があります。  
