--- a/docs/visual-basic/misc/bc36536.md
+++ b/docs/visual-basic/misc/bc36536.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33628699"
 ---
 # <a name="variable-cannot-be-initialized-with-non-array-type-39ltelementnamegt39"></a>非配列型を持つ変数を初期化することはできません&#39; &lt;elementname&gt;&#39;
 配列として宣言されている変数は、配列値で初期化する必要があります。  
