--- a/docs/visual-basic/misc/bc30520.md
+++ b/docs/visual-basic/misc/bc30520.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33615787"
 ---
 # <a name="argument-matching-parameter-39ltparameternamegt39-narrows-from-39lttype1gt39-to-39lttype2gt39"></a>パラメーターと一致する引数&#39; &lt;parametername&gt; &#39;から縮小変換&#39; &lt;type1&gt; &#39;に&#39; &lt;type2&gt;&#39;
 オーバーロードされたメソッドを呼び出しましたが、コンパイラで、縮小変換せずに呼び出すことのできるメソッドを検出できません。 縮小変換により、有効値の一部を正確に保持できない可能性のあるデータ型に値が変更されます。  
