--- a/docs/visual-basic/misc/bc30666.md
+++ b/docs/visual-basic/misc/bc30666.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33618356"
 ---
 # <a name="39throw39-statement-cannot-omit-operand-outside-a-39catch39-statement-or-inside-a-39finally39-statement"></a>&#39;スロー&#39;ステートメントは外側のオペランドを省略できません、&#39;キャッチ&#39;ステートメントまたは内側、 &#39;Finally&#39;ステートメント
 `Throw` ステートメントの外側にある `Catch` ステートメントでは、例外オブジェクトの名前を指定する必要があります。  
