--- a/docs/visual-basic/misc/bc30747.md
+++ b/docs/visual-basic/misc/bc30747.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33615409"
 ---
 # <a name="internal-compiler-error"></a>内部コンパイル エラー
 式の評価中に内部エラーが発生しました。  
