--- a/docs/visual-basic/misc/bc30794.md
+++ b/docs/visual-basic/misc/bc30794.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33617827"
 ---
 # <a name="no-accessible-39ltprocedurenamegt39-is-most-specific-ltsignaturelistgt"></a>ない&#39; &lt;procedurename&gt; &#39;に最も固有: &lt;signaturelist&gt;
 代入ステートメントによって、オーバーロードされたプロシージャのアドレスがデリゲート変数に代入されましたが、コンパイラではオーバーロードされたバージョン間の解決ができません。  
