--- a/docs/visual-basic/misc/bc31193.md
+++ b/docs/visual-basic/misc/bc31193.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33625887"
 ---
 # <a name="cannot-convert-39type139-to-39type239"></a>変換できない&#39;type1&#39;に&#39;type2&#39;
 'type1' を 'type2' に変換できません。 'parentElement' の最初の要素の文字列値は、'Value' プロパティを使用して取得できます。  
