--- a/docs/visual-basic/misc/bc31195.md
+++ b/docs/visual-basic/misc/bc31195.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33624213"
 ---
 # <a name="operator-39operator39-is-not-defined-for-types-39type139-and-39type239"></a>演算子&#39;演算子&#39;型に対して定義されていない&#39;type1&#39;と&#39;type2&#39;
 型 'type1' および 'type2' に対して演算子 'operator' が定義されていません。 最初の要素の文字列値を取得する、'Value' プロパティを使用することができます '\<parentElement >' です。  
