--- a/docs/visual-basic/misc/bc31197.md
+++ b/docs/visual-basic/misc/bc31197.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33624856"
 ---
 # <a name="full-width-characters-are-not-valid-as-xml-delimiters"></a>全角文字は、XML の区切り記号としては無効です
 区切り記号として全角文字を含む、XML リテラルが定義されています。 全角文字はワイド文字またはマルチバイト文字とも呼ばれます。  
