--- a/docs/visual-basic/misc/bc31400.md
+++ b/docs/visual-basic/misc/bc31400.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33624073"
 ---
 # <a name="local-variables-within-methods-of-structures-cannot-be-declared-39static39"></a>構造体のメソッド内のローカル変数を宣言することはできません&#39;静的&#39;
 構造体内のローカル変数には `Static` 修飾子を使用できません。  
