--- a/docs/visual-basic/misc/bc32104.md
+++ b/docs/visual-basic/misc/bc32104.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33628909"
 ---
 # <a name="39class39-constraint-and-39structure39-constraint-cannot-be-combined"></a>&#39;クラス&#39;制約と&#39;構造&#39;制約を組み合わせることができません
 制約リストには、両方が含まれます、[クラス (Visual Basic)](http://msdn.microsoft.com/library/0777c6e6-46bc-451b-ad70-57b49d4ef4f7)制約、および[構造体 (Visual Basic)](http://msdn.microsoft.com/library/263ce115-ac36-4c05-8cb7-0e0eead5c6d0)制約。  
