--- a/docs/visual-basic/misc/bc32504.md
+++ b/docs/visual-basic/misc/bc32504.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33629744"
 ---
 # <a name="39microsoftvisualbasiccomclassattribute39-cannot-be-applied-to-39ltclassname1gt39-because-its-container-39ltclassname2gt39-is-not-declared-39public39"></a>&#39;Microsoft.VisualBasic.ComClassAttribute&#39; cannot be applied to &#39;&lt;classname1&gt;&#39; because its container &#39;&lt;classname2&gt;&#39; is not declared &#39;Public&#39;
 `COMClassAttribute` 属性ブロックを使用するクラスが、 `Public`ではないクラスの内部で宣言されています。 クラスを COM オブジェクトとして公開する場合は、そのコンテインメント階層全体を `Public` アクセスで宣言する必要があります。  
