--- a/docs/visual-basic/misc/bc33028.md
+++ b/docs/visual-basic/misc/bc33028.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33630641"
 ---
 # <a name="conversion-operators-cannot-convert-to-object"></a>変換演算子によって Object に変換することはできません。
 変換演算子が、戻り値の型 [Object Data Type](../../visual-basic/language-reference/data-types/object-data-type.md)を使用して宣言されます。  
