--- a/docs/visual-basic/misc/bc36560.md
+++ b/docs/visual-basic/misc/bc36560.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33630861"
 ---
 # <a name="type-characters-cannot-be-used-in-anonymous-type-declarations"></a>型文字を匿名型の宣言で使用することはできません
 匿名型のインスタンスを宣言するときは、プロパティ名で型文字を使用できません。 プロパティのデータ型は、それに割り当てられた値から推論されます。 たとえば、次の宣言は無効です。  
