--- a/docs/visual-basic/misc/bc36581.md
+++ b/docs/visual-basic/misc/bc36581.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33630680"
 ---
 # <a name="type-arguments-for-extension-method-39ltmethodnamegt39-defined-in-39lttypenamegt39-could-not-be-inferred-from-the-delegate-39ltdelagatenamegt39"></a>拡張メソッドの引数が入力&#39; &lt;methodName&gt; &#39;で定義されている&#39; &lt;typeName&gt; &#39;デリゲートから推論できませんでした&#39; &lt;delagateName&gt;&#39;
 代入ステートメントは、 `AddressOf` を使用してジェネリック拡張メソッドのアドレスをデリゲートに割り当てますが、拡張メソッドに型引数が指定されていません。  
