--- a/docs/visual-basic/misc/bc36631.md
+++ b/docs/visual-basic/misc/bc36631.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33632006"
 ---
 # <a name="39join39-expected"></a>&#39;参加&#39;が必要です
 `Group Join` 句が `Join` キーワードを使用せずに指定されています。  
