--- a/docs/visual-basic/misc/bc40021.md
+++ b/docs/visual-basic/misc/bc40021.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33633228"
 ---
 # <a name="member-39ltmembernamegt39-conflicts-with-member-39ltmembernamegt39-in-the-base-type-39ltbasetypenamegt39-and-so-should-not-be-declared-39overloads39"></a>メンバー &#39; &lt;membername&gt; &#39;メンバーと競合して&#39; &lt;membername&gt; &#39;基本データ型で&#39; &lt;basetypename&gt; &#39;と宣言することはできませんので&#39;オーバー ロード&#39;
 プロパティまたはプロシージャが、同じ名前を持つ既存のプロパティまたはプロシージャを再宣言するために [Overloads](../../visual-basic/language-reference/modifiers/overloads.md) キーワードを使用していますが、既存のプロパティまたはプロシージャは基底クラスに存在しています。  
