--- a/docs/visual-basic/misc/bc41005.md
+++ b/docs/visual-basic/misc/bc41005.md
@@ -12,6 +12,7 @@ ms.sourcegitcommit: 3d5d33f384eeba41b2dff79d096f47ccc8d8f03d
 ms.translationtype: MT
 ms.contentlocale: ja-JP
 ms.lasthandoff: 05/04/2018
+ms.locfileid: "33634327"
 ---
 # <a name="operator-without-an-39as39-clause-type-of-object-assumed"></a>せず演算子、&#39;として&#39;句です。型のオブジェクトと見なされます
 演算子プロシージャは `As` 句を指定しません。  
